Squashed beta-1.5.7-pre05
commit 85c67c8116b3794ba8c476388620443b5d86053c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Mar 13 23:20:15 2016 +0100

    Remove unnecessary mnemonic marks from property files

commit d6c80664d08afd784e2200c7f7cac2cf6fc145d6
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Mar 13 23:17:22 2016 +0100

    Revert "Remove unnecessary mnemonic marks from property files"

    This reverts commit 4a999ca3df6959db07142877c9afa7d0099ccb67.

commit 4a999ca3df6959db07142877c9afa7d0099ccb67
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Mar 13 23:14:26 2016 +0100

    Remove unnecessary mnemonic marks from property files

commit 9051d8544b183cb7ea9acffefb34466a09990f45
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Mar 13 23:12:44 2016 +0100

    Mnemonic setter optimizations

commit 15fb6bd4a47984649e7c6df1bc113e7c0ef65103
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Mar 13 20:46:01 2016 +0100

    Do not try to set mnemonics on Mac OS

commit e2ffd50d6788b6eb0f7f47b80d65f0c0fe83c014
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Mar 13 20:14:32 2016 +0100

    Do not try to set mnemonics on Mac OS

commit 642ca8c976dc311d3aefb3fe2cf593855b9d7bea
Merge: b5d1933 fae0865
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Mar 13 20:05:36 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit b5d193345a0bdcff351f3bac605c6da5786b05a0
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Mar 13 20:05:28 2016 +0100

    Fix test

commit f5e064c7c9c4de2bc341f710951226190ac316bf
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Mar 13 20:05:21 2016 +0100

    remove unused imports

commit fae0865773fe01de841f8571169d23f7c9580c83
Merge: 217d066 a67e01d
Author: Weblate <noreply@weblate.org>
Date:   Sun Mar 13 19:40:46 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 217d066d8e83b063872c30ad984d8e254eb2c9a0
Author: Ldm 

--- a/freeplane/resources/translations/Resources_ca.properties
+++ b/freeplane/resources/translations/Resources_ca.properties
@@ -124,7 +124,7 @@ error_creating_directory=No es pot crear el directori per a exportar.
 ExecuteScripts.text=Scripts[translate me]
 export_pdf_text=Format de Document Portable(PDF)
 export_svg_text=Gr\u00E0fic Vectorial Escalable (SVG)
-ExportAction.text=&Exporta mapa\u2026
+ExportAction.text=Exporta mapa\u2026
 ExportBranchToHTMLAction.text=Branca com HTML
 ExportPdf.text=Com a PDF...
 ExportSvg.text=Com a SVG...
