--- a/freeplane/resources/translations/Resources_cs.properties
+++ b/freeplane/resources/translations/Resources_cs.properties
@@ -216,8 +216,8 @@ connector_shapes=Tvar konektoru
 ConnectorColorAction.text=Barva konektoru...
 CopyAction.text=Kop\u00EDrovat
 CopyAction.tooltip=Kop\u00EDrovat vybranou v\u011Btev
-CopyAttributes.text=Kop\u00EDrovat &atributy
-CopyIDAction.text=Kop\u00EDrovat I&D uzlu
+CopyAttributes.text=Kop\u00EDrovat atributy
+CopyIDAction.text=Kop\u00EDrovat ID uzlu
 CopyMapStylesAction.text=Kop\u00EDrovat styl mapy z...
 CopyNodeURIAction.text=Kop\u00EDrovat URI uzlu
 copyright=Copyright \u00A9 2000-2014 Freeplane t\u00FDm a dal\u0161\u00ED
@@ -333,7 +333,7 @@ export_failed=Export selhal
 export_pdf_text=Portable Document Format (PDF)
 export_svg_text=Scalable Vector Graphic (SVG)
 export_using_xslt=Export z Freeplane
-ExportAction.text=&Exportovat...
+ExportAction.text=Exportovat...
 ExportBranchAction.text=P\u0159esunete v\u011Btve do nov\u00E9 mapy...
 ExportBranchToHTMLAction.text=Exportovat v\u011Btev do HTML
 exported_file={0} soubor
@@ -374,7 +374,7 @@ FileProperties_NodeSelectionCount=Po\u010Det vybran\u00FDch uzl\u016F:
 FileProperties_TotalFilteredCount=Po\u010Det uzl\u016F, kter\u00E9 vyhovuj\u00ED filtru:
 FileProperties_TotalLeafCount=Celkov\u00FD po\u010Det koncov\u00FDch uzl\u016F:
 FileProperties_TotalNodeCount=Celkov\u00FD po\u010Det uzl\u016F:
-FilePropertiesAction.text=Stat&istika mapy...
+FilePropertiesAction.text=Statistika mapy...
 FileRevisionsDialog.cancel=&Storno
 FileRevisionsDialog.file_last_modified=\u010Casov\u00E9 raz\u00EDtko
 FileRevisionsDialog.file_name=Soubor
@@ -669,10 +669,10 @@ ItalicAction.text=Kurz\u00EDva
 italicise_branch=Nastavit kurz\u00EDvu
 java_version=Java verze: {0}
 latex_editor=Editace LaTeX vzorce
-LatexDeleteLatexAction.text=Odstran\u011Bn\u00ED LaTe&X vzorce
-LatexEditLatexAction.text=Editace &LaTeX vzorce...
+LatexDeleteLatexAction.text=Odstran\u011Bn\u00ED LaTeX vzorce
+LatexEditLatexAction.text=Editace LaTeX vzorce...
 LatexInsertLatexAction.msg1=<html>Pokou\u0161\u00EDte se vlo\u017Eit <i>zastaral\u00E9</i> LaTeX vzorce. <br/>Nov\u00FD zp\u016Fsob, jak vytvo\u0159it text LaTeXu, je pops\u00E1n na t\u00E9to str\u00E1nce:</html>
-LatexInsertLatexAction.text=P\u0159id\u00E1n\u00ED &LaTeX vzorce...
+LatexInsertLatexAction.text=P\u0159id\u00E1n\u00ED LaTeX vzorce...
 latexPatternFormat=LaTeX
 less_than_two_selected_nodes=Mus\u00EDte vybrat alespo\u0148 dva uzly, aby se mohly vytvo\u0159it odkazy.
 license=Licence: GPL 2 nebo nov\u011Bj\u0161\u00ED
@@ -727,8 +727,8 @@ ManageAddOnsDialog.tab.manage.themes=T\u00E9mata
 ManageAddOnsDialog.tab.manage.themes.tooltip=Spr\u00E1va nainstalovan\u00FDch motiv\u016F
 ManageAddOnsDialog.tab.manage.tooltip=Spr\u00E1va nainstalovan\u00FDch dopl\u0148k\u016F
 ManageAddOnsDialog.visit.addon.page=Nav\u0161tivte str\u00E1nku dopl\u0148k\u016F...
-ManageConditionalStylesAction.text=&Spr\u00E1va podm\u00EDn\u011Bn\u00FDch styl\u016F mapy
-ManageNodeConditionalStylesAction.text=Spr\u00E1v&a podm\u00EDn\u011Bn\u00FDch styl\u016F uzlu
+ManageConditionalStylesAction.text=Spr\u00E1va podm\u00EDn\u011Bn\u00FDch styl\u016F mapy
+ManageNodeConditionalStylesAction.text=Spr\u00E1va podm\u00EDn\u011Bn\u00FDch styl\u016F uzlu
 map_already_exists=Soubor mapy u\u017E existuje. Chcete ho p\u0159epsat?
 map_corrupted=Mapa je poni\u010Den\u00E1. Chcete zobrazit detaily?
 map_load_error=Nelze na\u010D\u00EDst mapu {0}
@@ -813,7 +813,7 @@ NewerFileRevisionsFoundDialog.title=Nalezeny nov\u011Bj\u0161\u00ED revize soubo
 NewLevelStyleAction.text=P\u0159idat \u00FArove\u0148 stylu
 newmap.install.addon.question={0} se zd\u00E1 b\u00FDt bal\u00ED\u010Dek s dopl\u0148kem\nChcete jej nainstalovat?\n(Zvolte "Ne" pro norm\u00E1ln\u00ED spu\u0161t\u011Bn\u00ED.)
 newmap.install.addon.title=Nainstalovat dopln\u011Bk?
-NewMapAction.text=&Nov\u00E1 mapa
+NewMapAction.text=Nov\u00E1 mapa
 NewMapViewAction.text=Nov\u00FD pohled na mapu
 NewParentNode.text=Nov\u00FD nad\u0159azen\u00FD uzel
 NewParentNode.tooltip=<html>V\u0161echny vybran\u00E9 uzly budou p\u0159i\u0159azen\u00E9 nov\u00E9mu nad\u0159azen\u00E9mu uzlu.</html>
