--- a/freeplane/resources/translations/Resources_es.properties
+++ b/freeplane/resources/translations/Resources_es.properties
@@ -301,7 +301,7 @@ EditDetailsAction.text=Editar los detalles del nodo
 EditDetailsInDialogAction.text=Editar el contenido del nodo (detalles) en el di\u00E1logo
 EditFilterAction.text=Editar
 EditLongAction.text=Edici\u00F3n Avanzada del Nodo...
-EditNoteInDialogAction.text=Editar &nota...
+EditNoteInDialogAction.text=Editar nota...
 EditScript=Editar Script...
 EditStylesAction.text=Editar estilos
 EncryptedMap.text=Crear Mapa Cifrado...
@@ -333,7 +333,7 @@ export_failed=Ha fallado la exportaci\u00F3n
 export_pdf_text=Formato de Documentos Portables (PDF)
 export_svg_text=Gr\u00E1fica de Vectores Escalables (SVG)
 export_using_xslt=Exportaci\u00F3n a Freeplane usando XSLT
-ExportAction.text=&Exportar mapa\u2026
+ExportAction.text=Exportar mapa\u2026
 ExportBranchAction.text=Mover Rama a nuevo Mapa...
 ExportBranchToHTMLAction.text=Rama como HTML
 exported_file=archivo {0}
@@ -373,7 +373,7 @@ FileProperties_NodeSelectionCount=N\u00FAmero de nodos seleccionados:
 FileProperties_TotalFilteredCount=N\u00FAmero de nodos que satisfacen el filtro:
 FileProperties_TotalLeafCount=N\u00FAmero total de nodos hoja:
 FileProperties_TotalNodeCount=N\u00FAmero total de nodos:
-FilePropertiesAction.text=Propieda&des...
+FilePropertiesAction.text=Propiedades...
 FileRevisionsDialog.cancel=&Cancelar
 FileRevisionsDialog.file_last_modified=Fecha y hora
 FileRevisionsDialog.file_name=Archivo
@@ -668,11 +668,11 @@ ItalicAction.text=Cursiva
 italicise_branch=Poner en Cursiva
 java_version=Versi\u00F3n de Java: {0}
 latex_editor=Editar f\u00F3rmula LaTeX
-LatexDeleteLatexAction.text=Quitar f\u00F3rmula LaTe&X
-LatexEditLatexAction.text=Editar f\u00F3rmula &LaTeX\u2026
+LatexDeleteLatexAction.text=Quitar f\u00F3rmula LaTeX
+LatexEditLatexAction.text=Editar f\u00F3rmula LaTeX\u2026
 LatexInsertLatexAction.msg1=<html>Est\u00E1 intentando insertar una f\u00F3rmula LaTex <i>antigua</i>.<br/>La nueva forma para crear texto/f\u00F3rmulas LaTeX se describe en la siguiente p\u00E1gina:</html>
 LatexInsertLatexAction.msg2=<html>En breve: <ul><li>use un prefijo "\\latex " en el texto del nodo o</li><li><i>Ver->Panel de formato</i>, y ah\u00ED:<i>Texto del nodo->Formato->Latex</i></li></ul></html>
-LatexInsertLatexAction.text=A\u00F1adir f\u00F3rmula &LaTeX\u2026
+LatexInsertLatexAction.text=A\u00F1adir f\u00F3rmula LaTeX\u2026
 latexPatternFormat=LaTeX
 less_than_two_selected_nodes=Tiene que seleccionar al menos dos nodos para poder crear enlaces.
 license=Licencia
@@ -814,7 +814,7 @@ NewerFileRevisionsFoundDialog.title=\u00A1Se han encontrado versiones m\u00E1s r
 NewLevelStyleAction.text=A\u00F1adir automaticamente el dise\u00F1o del estilo de nivel
 newmap.install.addon.question={0} parece que es un complemento\n\u00BFDesea instalarlo?\n(Seleccione "No" para abrirlo normalmente.)
 newmap.install.addon.title=\u00BFInstalar el complemento?
-NewMapAction.text=&Nuevo mapa
+NewMapAction.text=Nuevo mapa
 NewMapViewAction.text=Nueva Vista de Mapa
 NewParentNode.text=Nuevo Nodo Principal
 NewParentNode.tooltip=<html>Todos los seleccionados son enviados a un nuevo nodo Principal.</html>
@@ -1434,14 +1434,14 @@ RequestFeatureAction.text=Pedir una Caracter\u00EDstica nueva
 reset_to_default=Usar el predefinido
 ResetNodeLocationAction.text=Reinicia Posici\u00F3n
 ResetStyleAction.text=Quitar el estilo del nodo
-RevertAction.text=&Restaurar del archivo hist\u00F3rico local
+RevertAction.text=Restaurar del archivo hist\u00F3rico local
 RevisionPluginAction.text=Cambiar las modificaciones del color de fondo
 save_failed=Fall\u00F3 el intento de guardar el mapa {0}.
 save_unsaved=\u00BFDesea guardar el Mapa?
 save_unsaved_styles=\u00BFGuardar estilos?
 SaveAcceleratorPresetsAction.text=Guardar configuraci\u00F3n de teclas\u2026
 SaveAction.text=Guardar
-SaveAll.text=Guardar &Todo
+SaveAll.text=Guardar Todo
 SaveAll.tooltip=Guardar todos los mapas abiertos
 SaveAsAction.text=Guardar Como...
 saved=Guardado
