--- a/freeplane/resources/translations/Resources_et.properties
+++ b/freeplane/resources/translations/Resources_et.properties
@@ -32,12 +32,12 @@ antialias_all=Pehmenda: fonte k\u00F5ikjal
 antialias_edges=Pehmenda: servad
 antialias_none=Eemalda pehmendamine
 apply=&Rakenda
-ApplyAction.text=&Rakenda
-ApplyFormatPlugin.text=&Muuda vormingut ...
+ApplyAction.text=Rakenda
+ApplyFormatPlugin.text=Muuda vormingut ...
 ApplyFormatPlugin.tooltip=N\u00E4itab dialoogi kus s\u00F5lme ja \u00FChendusjoone omadusi saab korraga muuta.
 ApplyNoFilteringAction.text=Ei filtreerita
 as_parent=Kui eelmine
-AssignAttributesAction.text=&M\u00E4\u00E4ra omadused...
+AssignAttributesAction.text=M\u00E4\u00E4ra omadused...
 attribute_delete=Kustuta k\u00F5ik v\u00E4\u00E4rtused
 attribute_delete_value=Kustuta see v\u00E4\u00E4rtus
 attribute_font_size_tooltip=Omaduste kirjasuurus
@@ -74,7 +74,7 @@ attributes_skip_root=J\u00E4ta peas\u00F5lm vahele
 attributes_visible=Valitud n\u00E4htav
 attributes_visible_tooltip=Valitud n\u00E4htav
 automatically_save_message=Kaart salvestati automaatselt (kasutades failinime {0}) ...
-AutomaticLayoutAction.text=&Automaatne formaat
+AutomaticLayoutAction.text=Automaatne formaat
 AutomaticLayoutAction.tooltip=<html>Parandab kaardi formaati. <br>Esimene tase on must, teine sinine, jne.</html>
 BackAction.text=Tagasi
 BackAction.tooltip=H\u00FCppab valitud ahelas tagasi
@@ -85,7 +85,7 @@ BoldAction.text=Rasvane
 boldify_branch=Tee rasvaseks
 branch=Haru
 cancel=&Loobu
-CancelAction.text=&Loobu
+CancelAction.text=Loobu
 cannot_add_parent_diff_parents=K\u00F5ik alams\u00F5lmed peavad olema sama s\u00F5lme k\u00FCljes, et seda funktsiooni kasutada.
 cannot_add_parent_to_root=Peas\u00F5lme ei saa uue naabers\u00F5lme k\u00FClge lisada.
 cannot_delete_root=Peas\u00F5lme ei saa kustutada ega l\u00F5igata.
@@ -103,7 +103,7 @@ choose_cloud_color=Vali pilve v\u00E4rv:
 choose_edge_color=Vali \u00FChendusjoone v\u00E4rv
 choose_node_background_color=Vali s\u00F5lme taustav\u00E4rv:
 choose_node_color=Vali s\u00F5lme v\u00E4rv:
-CloseAction.text=&Sulge
+CloseAction.text=Sulge
 CloudAction.text=Pilv
 CloudColorAction.text=Pilve v\u00E4rv...
 ColorProperty.ResetColor=Taasta v\u00E4rvi algv\u00E4\u00E4rtus
@@ -113,7 +113,7 @@ connector=Connector[translate me]
 connector_label=Connector Label[translate me]
 CopyAction.text=Kopeeri
 CopySingleAction.text=Kopeeri \u00FCksik
-CreationModificationPluginAction.text=N\u00E4ita &Muutmise aegu
+CreationModificationPluginAction.text=N\u00E4ita Muutmise aegu
 CreationModificationPluginAction.tooltip=<html>See funktsioon j\u00E4litab s\u00F5lme loomise ja muutmise aegu.</html>
 CutAction.text=L\u00F5ika
 decrease_branch_font_size=V\u00E4henda haru kirja
@@ -146,13 +146,13 @@ EncryptedMap.text=Loo kr\u00FCpteeritud kaart ...
 EncryptedMap.tooltip=Loo uus kr\u00FCpteeritud kaart
 enter_base_url=Ma lisan viited suhteliste aadressidena. Palun sisesta p\u00F5hiaadress.
 enter_confirms=&Enter kinnitab
-EnterPassword.text=&L\u00FClita kr\u00FCpteeritud/kr\u00FCpteerimata
+EnterPassword.text=L\u00FClita kr\u00FCpteeritud/kr\u00FCpteerimata
 error=Viga
 error_applying_template=XSL-mallide kehtestamisel tekkis viga.
 error_creating_directory=Ei suuda kataloogi luua, et sinna eksportida.
 export_pdf_text=Kaasaskantav DokumendiVorming (PDF)
 export_svg_text=Skaleeritav Vektorgraafika (SVG)
-ExportAction.text=Kaardi &eksport...
+ExportAction.text=Kaardi eksport...
 ExportBranchAction.text=S\u00F5lmede haru kui uus kaart ...
 ExportBranchToHTMLAction.text=Haru HTML-ina
 ExportPdf.text=Kui PDF...
@@ -193,7 +193,7 @@ filter_selected_node_view=Hetkel valitud s\u00F5lmed
 find_what=Mida otsida
 FindAction.text=Otsi...
 fit_map_to_page=Mahuta \u00FChele lehek\u00FCljele
-FitToPage.text=Suurenda, et &Mahutada lehele
+FitToPage.text=Suurenda, et Mahutada lehele
 FitToPage.tooltip=Muuda suurendust selliselt, et kogu kaart mahub k\u00E4esolevasse aknasse.
 fold=Voldi
 FoldAllAction.text=Voldi k\u00F5ik kokku
@@ -239,7 +239,7 @@ GrabKeyDialog.grab-key.remove-ask=Oled Sa kindel, et soovid seda kiirklahvi eema
 GrabKeyDialog.grab-key.title=Sisesta uus klahv
 help=Abi
 HideAllAttributesAction.text=Peida k\u00F5ik omadused
-HierarchicalIconsAction.text=N\u00E4ita ikoone &hierarhiliselt
+HierarchicalIconsAction.text=N\u00E4ita ikoone hierarhiliselt
 HierarchicalIconsAction.tooltip=Kui \u00FCks (suur)s\u00F5lmedest omab ikooni siis n\u00E4idatakse seda ka v\u00E4ikeses formaadis.
 HotKeyInfoAction.text=Key Reference[translate me]
 html_export_based_on_headings=HTML-i eksportimine - p\u00F5hineb p\u00E4istel
@@ -326,7 +326,7 @@ IconSelectionPlugin.text=Vali ikoon...
 IconSelectionPlugin.tooltip=<html>Siin saab valida ikooni, kasutades selleks alamakent.</html>
 import=&Impordi
 import_linked_branch_no_link=Valitud s\u00F5lmel ei ole \u00FChtki viidet importida.
-ImportAction.text=&Impordi
+ImportAction.text=Impordi
 ImportBranchAction.text=Haru...
 ImportExplorerFavoritesAction.text=MS Internet Explorer-i viited...
 ImportFolderStructureAction.text=Kataloogide struktuur...
@@ -389,21 +389,21 @@ node=S\u00F5lm
 node_changed_discard_changes=Sa oled muutnud s\u00F5lme. Kas soovid muudatused unustada?
 node_is_write_protected=Sihtm\u00E4rk (s\u00F5lm) on kirjutuskaitstud.
 node_location_help=Lohistamine muudab s\u00F5lme asukohta, CTRL+lohistamine muudab kauguseid, topeltkl\u00F5ps ja CTRL+topeltkl\u00F5ps taastavad algseaded.
-NodeBackgroundColorAction.text=&S\u00F5lme taustav\u00E4rv...
+NodeBackgroundColorAction.text=S\u00F5lme taustav\u00E4rv...
 NodeColorAction.text=S\u00F5lme v\u00E4rv...
 NodeColorBlendAction.text=Sega v\u00E4rv
 NodeDownAction.text=Liiguta s\u00F5lm alla
 NodeListAction.text=Otsi ja asenda...
 NodeListAction.tooltip=N\u00E4itab k\u00F5iki s\u00F5lmi otsitava nimekirjana koos filtreerimisv\u00F5imalusega.
-NodeShapeAction.bubble.text=&Mull
-NodeShapeAction.fork.text=&Haru
+NodeShapeAction.bubble.text=Mull
+NodeShapeAction.fork.text=Haru
 NodeUpAction.text=Liiguta s\u00F5lm \u00FCles
 nonboldify_branch=Eemalda rasvane kiri
 nonitalicise_branch=Eemalda kaldkiri
 normal=Tavaline
 not_saved_for_link_error=Kaart tuleb enne failivalijale lingi m\u00E4\u00E4ramist salvestada
 ok=&Sobib
-OKAction.text=&Sobib
+OKAction.text=Sobib
 OpenAction.text=Ava...
 OpenFreeplaneSiteAction.text=Freeplane-i koduleht
 option_changes_may_require_restart=Muudetud seadistuste j\u00F5ustumiseks tuleb Freeplane taask\u00E4ivitada.
@@ -715,7 +715,7 @@ print_preview_title=Tr\u00FCkkimise eelvaatlus
 PrintAction.text=Tr\u00FCki...
 PrintDirectAction.text=Tr\u00FCki
 printing_settings=Tr\u00FCkkimise skaleerimine
-PrintPreviewAction.text=&Tr\u00FCkkimise eelvaatlus...
+PrintPreviewAction.text=Tr\u00FCkkimise eelvaatlus...
 PropertyAction.text=Eelistused ...
 QuitAction.text=Sulge programm
 read_only=Ainult lugemiseks
@@ -736,16 +736,16 @@ rename=&Nimeta \u00FCmber
 repair_link=Paranda viide
 repair_link_question=Ei suutnud viidatud kaarti laadida. Kas soovid k\u00E4sitsi viidet parandada?
 replace=Asenda
-ResetNodeLocationAction.text=Taasta esialgne &Paigutus
+ResetNodeLocationAction.text=Taasta esialgne Paigutus
 save_failed={0} katse kaarti salvestada eba\u00F5nnestus.
 save_unsaved=Kas salvestada see m\u00F5ttekaart?
-SaveAction.text=&Salvesta
-SaveAll.text=Salvesta &K\u00F5ik
+SaveAction.text=Salvesta
+SaveAll.text=Salvesta K\u00F5ik
 SaveAll.tooltip=Salvestab k\u00F5ik avatud kaardid
 SaveAsAction.text=Salvesta kui...
 saved=Salvestatud
 scheme_evaluate=Hinda!
-ScriptEditor.text=&Skripti redaktor...
+ScriptEditor.text=Skripti redaktor...
 ScriptEditor.tooltip=V\u00F5imaldab suuri skripte Freeplane-i sees kirjutada.
 ScriptEditorPanel.changed_cancel=Skripte on muudetud. Kas t\u00F5esti soovid loobuda neist muudatustest?
 select_favorites_folder=Vali kataloog kus asuvad Sinu j\u00E4rjehoidjad
@@ -762,7 +762,7 @@ SetLinkByFileChooserAction.text=H\u00FCperviide (faililehitseja)...
 SetLinkByTextFieldAction.text=H\u00FCperviide (tekstiv\u00E4li)...
 ShowAllAttributesAction.text=N\u00E4ita k\u00F5iki omadusi
 ShowAncestorsAction.text=N\u00E4ita eellasi
-ShowAttributeDialogAction.text=&Omaduste haldur...
+ShowAttributeDialogAction.text=Omaduste haldur...
 ShowDescendantsAction.text=N\u00E4ita j\u00E4rglasi
 ShowHideNoteAction.text=M\u00E4rkuste aken
 ShowHideNoteAction.tooltip=Lubab viisakalt m\u00E4rkuste aknal ilmuda v\u00F5i kaduda.
@@ -934,10 +934,10 @@ simplyhtml.valignLabel=P\u00FCstine joondus:
 simplyhtml.valignMiddle=keskele
 simplyhtml.valignTop=\u00FCles
 simplyhtml.wholeWordsOnly=Ainult terved s\u00F5nad
-SortNodes.text=&Sorteeri alams\u00F5lmed
+SortNodes.text=Sorteeri alams\u00F5lmed
 SortNodes.tooltip=Sorteerib k\u00F5ik alams\u00F5lmed t\u00E4hestiku j\u00E4rjekorras.
 split=&Poolita
-SplitNode.text=&Poolita s\u00F5lm
+SplitNode.text=Poolita s\u00F5lm
 SplitNode.tooltip=<html>S\u00F5lm on poolitatud</html>
 style=Stiil
 svg=SVG[translate me]
@@ -948,9 +948,9 @@ TimeManagementAction.tooltip=<html>N\u00E4itab kalendrimoodulit (autor: Kai Toed
 ToggleChildrenFoldedAction.text=Voldi s\u00F5lmed kokku/lahti
 ToggleFBarAction.text=F-Bar[translate me]
 ToggleFoldedAction.text=L\u00FClita voltimist \u00FCmber
-ToggleLeftToolbarAction.text=&Teine t\u00F6\u00F6riistariba
+ToggleLeftToolbarAction.text=Teine t\u00F6\u00F6riistariba
 ToggleMenubarAction.text=Men\u00FC\u00FCriba
-ToggleToolbarAction.text=&T\u00F6\u00F6riistariba
+ToggleToolbarAction.text=T\u00F6\u00F6riistariba
 undefined_error=Ootamatu viga tekkis. Palun proovi raporteerida sellest.
 underline=Jooni alla
 underlined=Allajoonitud
