--- a/freeplane/resources/translations/Resources_id.properties
+++ b/freeplane/resources/translations/Resources_id.properties
@@ -32,11 +32,11 @@ antialias_edges=Antialias Tangkai
 antialias_none=Tanpa Antialias
 apply=Terapkan
 ApplyAction.text=Terapkan
-ApplyFormatPlugin.text=&Ubah format...
+ApplyFormatPlugin.text=Ubah format...
 ApplyFormatPlugin.tooltip=Membuka kotak dialog untuk mengubah atribut node dan tangkai sekaligus.
 ApplyNoFilteringAction.text=Tanpa Filter
 as_parent=Seperti Induknya
-AssignAttributesAction.text=Pasan&g Atribut...
+AssignAttributesAction.text=Pasang Atribut...
 attribute_delete=Hapus Semua Nilai
 attribute_delete_value=Hapus Nilai Ini
 attribute_font_size_tooltip=Atribut Ukuran Font
@@ -74,7 +74,7 @@ attributes_skip_root=Abaikan Node Akar
 attributes_visible=Yang Tampak dan Dipilih
 attributes_visible_tooltip=Yang Tampak dan Dipilih
 automatically_save_message=Peta disimpan secara otomatis (menggunakan nama berkas {0}) ...
-AutomaticLayoutAction.text=&Atak Otomatis
+AutomaticLayoutAction.text=Atak Otomatis
 AutomaticLayoutAction.tooltip=<html>Menetapkan atak peta. <br>Level pertama hitam, kedua biru, dst.</html>
 BackAction.text=Mundur
 BackAction.tooltip=Lompat ke belakang dalam rantai terpilih
@@ -114,7 +114,7 @@ connector=Connector[translate me]
 connector_label=Connector Label[translate me]
 CopyAction.text=Salin
 CopySingleAction.text=Salin  Tunggal
-CreationModificationPluginAction.text=Tunjukkan &Waktu Diubah
+CreationModificationPluginAction.text=Tunjukkan Waktu Diubah
 CreationModificationPluginAction.tooltip=<html>Fungsi ini mencatat waktu pembuatan dan pengubahan node-node.</html>
 CutAction.text=Potong
 decrease_branch_font_size=Perkecil Font
@@ -151,14 +151,14 @@ EncryptedMap.text=Buat Peta Terenkripsi...
 EncryptedMap.tooltip=Buat peta terenkripsi baru.
 enter_base_url=Masukkan URL acuan. Hipertaut akan dibuat relatif mengacu terhadap URL ini.
 enter_confirms=Enter untuk Menerapkan
-EnterPassword.text=&Mati-hidupkan Enkripsi
+EnterPassword.text=Mati-hidupkan Enkripsi
 error=Galat
 error_applying_template=Galat menerapkan pola acu XSL.
 error_creating_directory=Tidak dapat membuat direktori untuk ekspor.
 ExecuteScripts.text=Scripts[translate me]
 export_pdf_text=Portable Document Format (PDF)
 export_svg_text=Scalable Vector Graphic (SVG)
-ExportAction.text=&Ekspor
+ExportAction.text=Ekspor
 ExportBranchToHTMLAction.text=Cabang sebagai HTML
 ExportPdf.text=Sebagai PDF...
 ExportSvg.text=Sebagai SVG...
@@ -198,7 +198,7 @@ filter_selected_node_view=Node Terpilih Saat Ini
 find_what=Temukan apa
 FindAction.text=Temukan...
 fit_map_to_page=Sesuaikan ke Satu Halaman
-FitToPage.text=Zum untuk Menyesuaikan ke &Halaman
+FitToPage.text=Zum untuk Menyesuaikan ke Halaman
 FitToPage.tooltip=Sesuaikan zum hingga seluruh peta tertampilkan dalam jendela ini.
 fold=Lipat
 FoldAllAction.text=Lipat Semua
@@ -244,7 +244,7 @@ GrabKeyDialog.grab-key.remove-ask=Anda yakin hendak mencopot kunci ini?
 GrabKeyDialog.grab-key.title=Masukkan kunci baru
 help=Bantuan
 HideAllAttributesAction.text=Sembunyikan Atribut Terpilih
-HierarchicalIconsAction.text=Tampilkan Ikon secara &Hirarkis
+HierarchicalIconsAction.text=Tampilkan Ikon secara Hirarkis
 HierarchicalIconsAction.tooltip=Bila salah satu dari anak(-cucu) node ini memiliki ikon, ikon tersebut akan ditampilkan juga di sini dalam format kecil.
 HotKeyInfoAction.text=Key Reference[translate me]
 html_export_based_on_headings=Ekspor HTML - Berdasarkan Tajuk
@@ -383,14 +383,14 @@ no_previous_find=Tidak ada pencarian sebelumnya.
 node=Node
 node_changed_discard_changes=Node telah diubah. Anda ingin membatalkan perintah ini?
 node_location_help=Menyeret memindahkan lokasi node, ctrl+seret mengganti jarak, klik ganda dan ctrl+klik ganda menatanya ulang.
-NodeBackgroundColorAction.text=Warna Latar Belakang &Node...
+NodeBackgroundColorAction.text=Warna Latar Belakang Node...
 NodeColorAction.text=Warna Node...
 NodeColorBlendAction.text=Campur Warna
 NodeDownAction.text=Node ke Bawah
 NodeListAction.text=Temukan dan Ganti...
 NodeListAction.tooltip=Tampilkan semua node sebagai senarai yang dapat dicari melalui penyaring properti.
-NodeShapeAction.bubble.text=&Balon
-NodeShapeAction.fork.text=&Ranting
+NodeShapeAction.bubble.text=Balon
+NodeShapeAction.fork.text=Ranting
 NodeUpAction.text=Node ke Atas
 nonboldify_branch=Tak-tebalkan
 nonitalicise_branch=Tak-miringkan
@@ -650,7 +650,7 @@ OptionPanel.windows=Windows
 OptionPanel.zh_CN=Zh CN
 OptionPanel.zh_TW=Zh
 out_of_memory=Out of memory.[translate me]
-PageAction.text=&Penataan Halaman...
+PageAction.text=Penataan Halaman...
 PasteAction.text=Tempel
 PatternNewNameProperty=Pola Baru
 PatternToString.backgroundColor=Warna Latar Belakang
@@ -706,7 +706,7 @@ print_preview_title=Tampakan Awal
 PrintAction.text=Cetak...
 PrintDirectAction.text=Cetak
 printing_settings=Skala Cetak
-PrintPreviewAction.text=Cetak Tampakan A&wal...
+PrintPreviewAction.text=Cetak Tampakan Awal...
 PropertyAction.text=Preferensi...
 QuitAction.text=Keluar
 read_only=Baca Saja
@@ -727,11 +727,11 @@ repair_link=Perbaiki Taut
 repair_link_question=Peta tertaut tidak dapat dimuat. Perbaiki taut secara manual?
 replace=Ganti
 ReportBugAction.text=Report a Bug[translate me]
-ResetNodeLocationAction.text=Tata-ulang &Posisi
+ResetNodeLocationAction.text=Tata-ulang Posisi
 save_failed=Usaha menyimpan peta {0} gagal
 save_unsaved=Simpan peta berikut?
 SaveAction.text=Simpan
-SaveAll.text=Simpan Semu&a
+SaveAll.text=Simpan Semua
 SaveAll.tooltip=Simpan semua peta terbuka
 SaveAsAction.text=Simpan Sebagai
 saved=Tersimpan
@@ -753,7 +753,7 @@ SetLinkByFileChooserAction.text=Hipertaut (Pemilih Berkas)
 SetLinkByTextFieldAction.text=Hipertaut (Kolom Teks)
 ShowAllAttributesAction.text=Tampilkan Semua Atribut
 ShowAncestorsAction.text=Tampilkan Moyangnya
-ShowAttributeDialogAction.text=Kelola &Atribut...
+ShowAttributeDialogAction.text=Kelola Atribut...
 ShowDescendantsAction.text=Tunjukkan Keturunannya
 ShowFilterToolbarAction.text=Filter Toolbar[translate me]
 ShowHideNoteAction.text=Jendela Catatan
@@ -926,10 +926,10 @@ simplyhtml.valignLabel=Perataan Vertikal
 simplyhtml.valignMiddle=tengah
 simplyhtml.valignTop=atas
 simplyhtml.wholeWordsOnly=Hanya kata seutuhnya
-SortNodes.text=&Urutkan Anak-anak
+SortNodes.text=Urutkan Anak-anak
 SortNodes.tooltip=Urutkan semua anak dari node menurut abjad.
 split=Pisahkan
-SplitNode.text=&Pisahkan Node
+SplitNode.text=Pisahkan Node
 SplitNode.tooltip=<html>Node dipisahkan</html>
 style=Gaya
 svg=SVG[translate me]
@@ -940,9 +940,9 @@ TimeManagementAction.tooltip=<html>Tunjukkan modul Kalender buatan Kai Toedter.<
 ToggleChildrenFoldedAction.text=Buka/Tutup Lipatan Anak
 ToggleFBarAction.text=F-Bar[translate me]
 ToggleFoldedAction.text=Buka/Tutup Lipatan
-ToggleLeftToolbarAction.text=Luntang &Kedua
+ToggleLeftToolbarAction.text=Luntang Kedua
 ToggleMenubarAction.text=Bilah Menu
-ToggleToolbarAction.text=&Luntang
+ToggleToolbarAction.text=Luntang
 undefined_error=Galat yang tidak diharapkan terjadi. Tolong coba aporkan sebagai bug.
 underline=Garis Bawah
 underlined=Garis Bawah
