--- a/freeplane/resources/translations/Resources_it.properties
+++ b/freeplane/resources/translations/Resources_it.properties
@@ -81,8 +81,8 @@ antialias_all=Antialias tutto
 antialias_edges=Antialias Collegamenti
 antialias_none=Antialias niente
 apply=&Applica
-ApplyAction.text=&Applica
-ApplyFormatPlugin.text=&Cambia formato...
+ApplyAction.text=Applica
+ApplyFormatPlugin.text=Cambia formato...
 ApplyFormatPlugin.tooltip=Visualizza una finestra tramite cui si possono cambiare gli Attributi del nodo e del collegamento.
 ApplyNoFilteringAction.text=Nessun filtro
 ApplySelectedViewConditionAction.text=Filtra i nodi selezionati
@@ -98,7 +98,7 @@ attribute_name=Nome Attributi
 attribute_replace=Sostituisci con
 attribute_top=Tutti gli Attributi conosciuti per la mappa aperta
 attribute_value=Valore Attributi
-attributes_AddAttributeAction.text=A&ggiungi Attributi...
+attributes_AddAttributeAction.text=Aggiungi Attributi...
 attributes_adding_empty_attribute_error=Non si pu\u00F2 usare una stringa vuota come nome attributo
 attributes_all=Tutti gli Attributi
 attributes_assign_dialog=Assegna Attributi
@@ -141,7 +141,7 @@ AutomaticLayout.ALL=Per tutti
 AutomaticLayout.HEADINGS=Per le intestazioni
 AutomaticLayout.level=Livello {0}
 AutomaticLayout.level.root=Nodo Principale
-AutomaticLayoutAction.text=&Applica Stili Livelli
+AutomaticLayoutAction.text=Applica Stili Livelli
 AutomaticLayoutAction.tooltip=<html>Regola la formattazione della mappa. <br> Il primo livello nero, il secondo blu, etc.</html>
 AutomaticLayoutControllerAction.ALL.text=per tutti i nodi
 AutomaticLayoutControllerAction.HEADINGS.text=per i nodi terminali
@@ -166,7 +166,7 @@ can_not_delete_root_style=Non si pu\u00F2 cancellare lo stile del nodo Principal
 can_not_delete_style_group=Non si pu\u00F2 cancellare lo stile del gruppo
 can_not_save_key_set=Salvataggio configurazione Tasti Rapidi, non riuscita
 cancel=&Annulla
-CancelAction.text=&Annulla
+CancelAction.text=Annulla
 cannot_add_parent_diff_parents=Tutti i nodi devono avere lo stesso genitore per usare questa funzione.
 cannot_add_parent_to_root=Il nodo radice non pu\u00F2 essere aggiunto ad un nuovo genitore.
 cannot_delete_root=Il nodo radice non pu\u00F2 essere cancellato o tagliato.
@@ -215,12 +215,12 @@ connector_shapes=Forma del Collegamento grafico
 ConnectorColorAction.text=Colore del Collegamento grafico...
 CopyAction.text=Copia
 CopyAction.tooltip=Copia l'intero ramo
-CopyAttributes.text=Copia &Attributi
+CopyAttributes.text=Copia Attributi
 CopyIDAction.text=Copia l'ID del nodo
 CopyMapStylesAction.text=Copia lo stile della mappa...
 CopyNodeURIAction.text=Copiare URI del Nodo
 copyright=Copyright \u00A9 2000-2014 Freeplane team and others
-CopySingleAction.text=Copia Nodo (&singolo)
+CopySingleAction.text=Copia Nodo (singolo)
 CopySingleAction.tooltip=Copia solo il nodo selezionato
 CopyStyleExtensionsAction.text=Copiare le estensioni dallo stile del nodo
 corrupt_map=Il contenuto della mappa \u00E8 corrotto
@@ -299,7 +299,7 @@ EditDetailsAction.text=Modifica Dettagli del nodo
 EditDetailsInDialogAction.text=Modifica i dettagli del nodo, in una finestra separata
 EditFilterAction.text=Modifica...
 EditLongAction.text=Modifica avanzata nodo...
-EditNoteInDialogAction.text=Modifica &note...
+EditNoteInDialogAction.text=Modifica note...
 EditScript=Modifica Script...
 EditStylesAction.text=Modifica Stili
 EncryptedMap.text=Crea mappa criptata ...
@@ -312,7 +312,7 @@ enter_map_url=Inserire l'indirizzo web della mappa
 enter_new_style_name=Inserire il nome del nuovo stile
 enter_node_id=Inserire l'ID del nodo
 enter_zoom=Inserire Zoom
-EnterPassword.text=&Commuta Criptato / Non Criptato
+EnterPassword.text=Commuta Criptato / Non Criptato
 error=Errore
 error_applying_template=Errore nell'applicazione del modello XSL
 error_creating_directory=Impossibile creare directory per esportare.
@@ -331,7 +331,7 @@ export_failed=Esportazione fallita
 export_pdf_text=Portable Document Format (PDF)
 export_svg_text=Scalable Vector Graphic (SVG)
 export_using_xslt=Esporta a Freeplane usando XSLT
-ExportAction.text=&Esporta
+ExportAction.text=Esporta
 ExportBranchAction.text=Ramifica come nuova mappa...
 ExportBranchToHTMLAction.text=Esporta ramo in HTML
 exported_file={0} file
@@ -371,7 +371,7 @@ FileProperties_NodeSelectionCount=Numero di nodi selezionati:
 FileProperties_TotalFilteredCount=Numero di nodi che soddisfano il filtro:
 FileProperties_TotalLeafCount=Numero totale di nodi finali:
 FileProperties_TotalNodeCount=Numero tatale di nodi:
-FilePropertiesAction.text=Propr&iet\u00E0...
+FilePropertiesAction.text=Propriet\u00E0...
 FileRevisionsDialog.cancel=&Annulla
 FileRevisionsDialog.file_last_modified=Marca Temporale "Timestamp"
 FileRevisionsDialog.file_name=File
@@ -647,7 +647,7 @@ image_covertLink=Convertire Link in Immagine
 ImageFlavorHandler=Immagine (In File separato)
 import=I&mporta
 import_linked_branch_no_link=Il seguente nodo non ha link da cui importare.
-ImportAction.text=&Importa
+ImportAction.text=Importa
 ImportBranchAction.text=Importa ramo...
 ImportExplorerFavoritesAction.text=Importa preferiti di Internet Explorer...
 ImportFolderStructureAction.text=Importa struttura cartella...
@@ -665,9 +665,9 @@ invalid_url_msg=Impossibile creare URL valido per {0}
 ItalicAction.text=Corsivo
 italicise_branch=Corsivo sul ramo
 java_version=Versione Java: {0}
-LatexDeleteLatexAction.text=Rimuovi formula LaTe&X
-LatexEditLatexAction.text=Modifica formula &LaTeX...
-LatexInsertLatexAction.text=Aggiungere formula &LaTeX...
+LatexDeleteLatexAction.text=Rimuovi formula LaTeX
+LatexEditLatexAction.text=Modifica formula LaTeX...
+LatexInsertLatexAction.text=Aggiungere formula LaTeX...
 less_than_two_selected_nodes=Seleziona almeno due nodi per collegarli
 license=Licenza
 license_text=<html>This program is free software; you can redistribute it and/or<br>modify it under the terms of the GNU General Public License<br>as published by the Free Software Foundation; either version 2<br>of the License, or (at your option) any later version.<br><br>This program is distributed in the hope that it will be useful,<br>but WITHOUT ANY WARRANTY; without even the implied warranty of<br>MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the<br>GNU General Public License for more details.<br><br>You should have received a copy of the GNU General Public License<br>along with this program; if not, write to the Free Software<br>Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
@@ -835,7 +835,7 @@ node_location_help=Trascinare per cambiare la posizione del nodo, ctrl+trascina 
 node_selector=Selezione Nodo
 node_selector_message=Doppio Click seleziona Nodo
 node_styles=Stili Nodo
-NodeBackgroundColorAction.text=&Colore sfondo nodo...
+NodeBackgroundColorAction.text=Colore sfondo nodo...
 NodeColorAction.text=Colore testo nodo...
 NodeColorBlendAction.text=Miscela colore con sfondo mappa
 NodeDownAction.text=Sposta Nodo sotto
@@ -843,8 +843,8 @@ NodeExtensions.EditNodeExtensions=Modifica le estensioni dei nodi
 NodeExtensions.RemoveNodeExtensions=Rimuovi le estensioni dei nodi
 NodeListAction.text=Trova e sostituisci...
 NodeListAction.tooltip=Visualizza tutti i nodi come lista ricerche con le propriet\u00E0 del filtro.
-NodeShapeAction.bubble.text=&Bolla
-NodeShapeAction.fork.text=Bi&forcazione
+NodeShapeAction.bubble.text=Bolla
+NodeShapeAction.fork.text=Biforcazione
 NodeUpAction.text=Sposta Nodo sopra
 nonboldify_branch=Togli grassetto
 nonitalicise_branch=Togli corsivo
@@ -854,10 +854,10 @@ not_saved_for_link_error=La mappa deve essere salvata, prima di scegliere un col
 note_window_location=Posizione finestra delle note
 notes=Note
 ok=&OK
-OKAction.text=&OK
+OKAction.text=OK
 OnlineReference.text=Mappa documentazione Online
 open_asMindMap=Mappa Mentale
-OpenAction.text=&Apri mappa salvata...
+OpenAction.text=Apri mappa salvata...
 OpenFreeplaneSiteAction.text=Homepage di Freeplane
 OpenPathAction.text=Apri File
 OpenURLMapAction.text=Apri mappa dall'indirizzo...
@@ -1295,7 +1295,7 @@ overwrite_keyset_question=Sovrascrivere le impostazioni dei tasti esistenti ?
 PageAction.text=Impostazione pagina
 password_is_not_ascii=La password non \u00E8 un carattere valido ASCII
 PasteAction.text=Incolla
-PasteAttributes.text=Incolla att&ributi
+PasteAttributes.text=Incolla attributi
 PatternNewNameProperty=Nuovo schema
 PatternToString.backgroundColor=Colore di sfondo
 PatternToString.Child=Stile nodo figlio
@@ -1408,7 +1408,7 @@ replace_shortcut_title=Rimpiazzare scorciatoia ?
 ReportBugAction.text=Segnalare un errore
 RequestFeatureAction.text=Richiedere una funzione
 reset_to_default=Usa predefinito
-ResetNodeLocationAction.text=Azzera &Posizione
+ResetNodeLocationAction.text=Azzera Posizione
 ResetStyleAction.text=Azzera stile nodo
 RevertAction.text=Ricarica la mappa dal file
 RevisionPluginAction.text=Colore di sfondo per Modifica e Revisione
@@ -1416,8 +1416,8 @@ save_failed=Salvataggio della mappa {0} fallito.
 save_unsaved=Salvare la seguente mappa ?
 save_unsaved_styles=Salvare Stili ?
 SaveAcceleratorPresetsAction.text=Salva il set di Tasti Rapidi
-SaveAction.text=&Salva
-SaveAll.text=S&alva tutto
+SaveAction.text=Salva
+SaveAll.text=Salva tutto
 SaveAll.tooltip=Salva tutte le mappe aperte.
 SaveAsAction.text=Salva con nome
 saved=Salvata
@@ -1464,7 +1464,7 @@ SetShortenerStateAction.text=Contenuto accorciato del nodo
 sf_login_required=Autenticazione a Source Forge richiesta, Continuare ?
 ShowAllAttributesAction.text=Visualizza tutti gli attributi
 ShowAncestorsAction.text=Visualizza ascendenti
-ShowAttributeDialogAction.text=&Gestione attributi
+ShowAttributeDialogAction.text=Gestione attributi
 ShowDescendantsAction.text=Visualizza discendenti
 ShowFilterToolbarAction.text=Barra del Filtro
 ShowFormatPanel.text=Pannello di Formattazione
@@ -1706,10 +1706,10 @@ ToggleDetailsAction.text=Commuta Dettagli
 ToggleFBarAction.text=F-Barra
 ToggleFoldedAction.text=Collassa/Espandi
 ToggleFullScreenAction.text=Modalit\u00E0 a schermo intero
-ToggleLeftToolbarAction.text=&Barra delle icone
+ToggleLeftToolbarAction.text=Barra delle icone
 ToggleMenubarAction.text=Barra dei menu
 ToggleStatusAction.text=Visualizza la Linea di Stato
-ToggleToolbarAction.text=&Barra degli strumenti
+ToggleToolbarAction.text=Barra degli strumenti
 toolbars=Barre Strumenti
 undefined_error=Si \u00E8 verificato un errore imprevisto. Inviare un rapporto errori, grazie.
 underline=Sottolinea
