--- a/freeplane/resources/translations/Resources_nb.properties
+++ b/freeplane/resources/translations/Resources_nb.properties
@@ -228,7 +228,7 @@ error_applying_template=Feil under bruk av XSL-mal.
 error_creating_directory=F\u00E5r ikke opprettet omr\u00E5de for eksport.
 export_pdf_text=Flyttbart dokumentformat (PDF)
 export_svg_text=Skalerbar vektorgrafikk (SVG)
-ExportAction.text=&Eksporter kart\u2026
+ExportAction.text=Eksporter kart\u2026
 ExportBranchToHTMLAction.text=Eksporter gren til HTML
 ExportPdf.text=Som PDF...
 ExportSvg.text=Som SVG...
@@ -386,9 +386,9 @@ import_linked_branch_no_link=Den valgte noden har ingen lenke for \u00E5 importe
 ImportAction.text=Import
 ImportBranchAction.text=Importer gren\u2026
 ImportExplorerFavoritesAction.text=Importer explorer-favoritter\u2026
-ImportFolderStructureAction.text=&Importer filmappestruktur\u2026
+ImportFolderStructureAction.text=Importer filmappestruktur\u2026
 ImportLinkedBranchAction.text=Importer lenkede grener
-ImportLinkedBranchWithoutRootAction.text=Importer gren &uten rot\u2026
+ImportLinkedBranchWithoutRootAction.text=Importer gren uten rot\u2026
 ImportMindmanagerFiles.text=MindManager X5 Map...
 increase_branch_font_size=St\u00F8rre (gren) skrift
 IncreaseNodeFontAction.text=St\u00F8rre (gren) skrift
@@ -733,7 +733,7 @@ save_unsaved=Lagre hjernekart? :
 SaveAction.text=Lagre
 SaveAll.text=Lagre alle
 SaveAll.tooltip=Lagrer alle \u00E5pne kart
-SaveAsAction.text=Lagre &som\u2026
+SaveAsAction.text=Lagre som\u2026
 saved=Lagret
 scheme_evaluate=Evaluer!
 ScriptEditor.text=Skriptredigering...
