--- a/freeplane/resources/translations/Resources_nl.properties
+++ b/freeplane/resources/translations/Resources_nl.properties
@@ -82,8 +82,8 @@ antialias_all=Alles verzachten
 antialias_edges=Takken verzachten
 antialias_none=Niets verzachten
 apply=&Toepassen
-ApplyAction.text=&Toepassen
-ApplyFormatPlugin.text=&Algemene knoopstijl wijzigen...
+ApplyAction.text=Toepassen
+ApplyFormatPlugin.text=Algemene knoopstijl wijzigen...
 ApplyFormatPlugin.tooltip=Toont dialoogvenster waarin alle eigenschappen van knopen en lijnen  in \u00E9\u00E9n keer gewijzigd kunnen worden....
 ApplyNoFilteringAction.text=Stoppen filteren
 ApplySelectedViewConditionAction.text=Niet-geselecteerde knopen verbergen
@@ -142,7 +142,7 @@ AutomaticLayout.ALL=Voor alles
 AutomaticLayout.HEADINGS=Voor kopjes (headings)
 AutomaticLayout.level=Kop {0}
 AutomaticLayout.level.root=Titel
-AutomaticLayoutAction.text=&Opmaken per knoopniveau
+AutomaticLayoutAction.text=Opmaken per knoopniveau
 AutomaticLayoutAction.tooltip=<html> Herstelt de standaardopmaak van de  mindmap. <br>Het eerste niveau is zwart, het tweede blauw enz.</html>
 AutomaticLayoutControllerAction.ALL.text=voor alle knopen
 AutomaticLayoutControllerAction.HEADINGS.text=voor niet-bladeren
@@ -167,7 +167,7 @@ can_not_delete_root_style=Kan opmaakstijl stamknoop niet wissen
 can_not_delete_style_group=Kan sijlgroep niet wissen
 can_not_save_key_set=Kan de set met sneltoetsen niet bewaren
 cancel=&Annuleren
-CancelAction.text=&Annuleren
+CancelAction.text=Annuleren
 cannot_add_parent_diff_parents=Alle knopen moeten dezelfde ouder hebben om deze functie te kunnen gebruiken.
 cannot_add_parent_to_root=De stamknoop kan niet aan een nieuwe ouderknoop worden gekoppeld.
 cannot_delete_root=De stamknoop kan niet worden verwijderd.
@@ -197,7 +197,7 @@ choose_node_color=Kies tekstkleur voor de knoop:
 ClearLinkAnchorAction.text=Wissen koppelingsanker
 ClearLinkAnchorAction.tooltip=<html>wis eerder ingesteld knoopanker</html>
 close_btn=Sluiten
-CloseAction.text=&Sluiten mindmap
+CloseAction.text=Sluiten mindmap
 CloudAction.text=Maken/verwijderen wolk
 CloudColorAction.text=Kleur wolk...
 CloudShapeAction.ARC.text=Boog
@@ -228,7 +228,7 @@ corrupt_map=De inhoud van de mindmap is beschadigd
 CreateConjunctConditionAction.text=En
 CreateDisjunctConditionAction.text=Of
 CreateNotSatisfiedConditionAction.text=Niet
-CreationModificationPluginAction.text=&Tonen wanneer gewijzigd
+CreationModificationPluginAction.text=Tonen wanneer gewijzigd
 CreationModificationPluginAction.tooltip=<html> Deze functie houdt bij wanneer knopen gemaakt en gewijzigd zijn.</html>
 current_dir=Mindmaps
 CutAction.text=Knippen
@@ -333,7 +333,7 @@ export_failed=xporteren is mislukt
 export_pdf_text=PDF, Portable Document Format
 export_svg_text=SVG, Scalable Vector Graphic
 export_using_xslt=Exporteren naar:
-ExportAction.text=&Exporteren...
+ExportAction.text=Exporteren...
 ExportBranchAction.text=Exporteren tak als nieuwe mindmap...
 ExportBranchToHTMLAction.text=HTML, volledige tak
 exported_file={0} bestand
@@ -649,7 +649,7 @@ image_covertLink=Converteer koppeling naar afbeelding
 ImageFlavorHandler=Afbeelding (gebruik apart bestand)
 import=Importeren
 import_linked_branch_no_link=De geselecteerde knoop heeft geen hyperlink om de afbeelding te importeren.
-ImportAction.text=&Importeren
+ImportAction.text=Importeren
 ImportBranchAction.text=Importeren volledige tak...
 ImportExplorerFavoritesAction.text=Importeren Explorer-favorieten...
 ImportFolderStructureAction.text=Importeren mappenstructuur...
@@ -842,15 +842,15 @@ node_location_help=Slepen verandert de plaats van de knoop, ctrl+slepen verander
 node_selector=Knoopselectie
 node_selector_message=Klik dubbel om knoop te selekteren
 node_styles=Knoop stijlen
-NodeBackgroundColorAction.text=&Knoopachtergrondkleur...
-NodeColorAction.text=&Tekstkleur...
-NodeColorBlendAction.text=K&leiner kleurcontrast
+NodeBackgroundColorAction.text=Knoopachtergrondkleur...
+NodeColorAction.text=Tekstkleur...
+NodeColorBlendAction.text=Kleiner kleurcontrast
 NodeDownAction.text=Knoop naar beneden
 NodeExtensions.EditNodeExtensions=Bewerken tekstextenties
 NodeExtensions.RemoveNodeExtensions=Verwijderen tekstextenties
 NodeListAction.text=Zoeken en vervangen...
 NodeListAction.tooltip=Tonen alle knopen als doorzoekbare lijst met filterkenmerken.
-NodeShapeAction.bubble.text=Knoop met &omlijning
+NodeShapeAction.bubble.text=Knoop met omlijning
 NodeShapeAction.fork.text=Knoop zonder omlijning
 NodeUpAction.text=Knoop naar boven
 nonboldify_branch=Vet uitschakelen
@@ -861,7 +861,7 @@ not_saved_for_link_error=De mindmap moet zijn voor je met de bestandskiezer een 
 note_window_location=Positie notitiehulpvenster
 notes=Knoopnotitie
 ok=OK
-OKAction.text=&OK
+OKAction.text=OK
 OnlineReference.text=Online documentatiemindmaps
 open_asMindMap=Miindmap
 OpenAction.text=Openen mindmap...
@@ -1319,7 +1319,7 @@ org.freeplane.plugin.bugreport.wanted_bug=Er deed zich een interne fout voor en 
 org.freeplane.plugin.script.NodeIdHighlighter.node_is_not_defined=Knoop {0} is niet gedefinieerd
 out_of_memory=Onvoldoende geheugen beschikbaar.
 overwrite_keyset_question=Bestaande set met sneltoetsen overschrijven?
-PageAction.text=&Afdrukinstellingen...
+PageAction.text=Afdrukinstellingen...
 password_is_not_ascii=Wachtwoord bevat andere tekes dan ASCII
 PasteAction.text=Plakken
 PasteAttributes.text=Plakken attributen
@@ -1393,7 +1393,7 @@ print_preview_title=Afdrukvoorbeeld
 PrintAction.text=Afdrukken mindmap...
 PrintDirectAction.text=Afdrukken
 printing_settings=Pagina-afdrukinstellingen
-PrintPreviewAction.text=&Afdrukvoorbeeld...
+PrintPreviewAction.text=Afdrukvoorbeeld...
 progress=%Schijf
 PropertyAction.dialog=Instellingen
 PropertyAction.text=Instellingen...
@@ -1437,9 +1437,9 @@ replace_shortcut_title=Sneltoets vervangen ?
 ReportBugAction.text=Melden van een fout
 RequestFeatureAction.text=Vragen om een nieuwe functie
 reset_to_default=Terug naar de standaardinstelling
-ResetNodeLocationAction.text=&Herstellen oorspronkelijke knoopposities
+ResetNodeLocationAction.text=Herstellen oorspronkelijke knoopposities
 ResetStyleAction.text=Herstel knoopstijl
-RevertAction.text=&Terug gaan naar opgeslagen versie
+RevertAction.text=Terug gaan naar opgeslagen versie
 RevisionPluginAction.text=Tonen revisies door achtergrondkleur
 save_failed=Bewaren van mindmap {0} is mislukt.
 save_unsaved=De volgende mindmap bewaren?
@@ -1495,7 +1495,7 @@ SetShortenerStateAction.text=Minimaliseren knoop
 sf_login_required=Loging bij Source Forge vereist. Doorgaan?
 ShowAllAttributesAction.text=Tonen alle attibuten
 ShowAncestorsAction.text=Ook voorouders tonen
-ShowAttributeDialogAction.text=&Tonen en verbergen attributen....
+ShowAttributeDialogAction.text=Tonen en verbergen attributen....
 ShowDescendantsAction.text=Ook afstammelingen tonen
 ShowFilterToolbarAction.text=Tonen filtermenu
 ShowFormatPanel.text=Tonen opmaakpaneel
