--- a/freeplane/resources/translations/Resources_pl.properties
+++ b/freeplane/resources/translations/Resources_pl.properties
@@ -318,7 +318,7 @@ export_failed=Eksportowanie nie powiod\u0142o si\u0119
 export_pdf_text=Dokument PDF
 export_svg_text=Skalowalna grafika wektorowa (SVG)
 export_using_xslt=Eksportowanie u\u017Cywaj\u0105c XSLT
-ExportAction.text=&Eksport mapy...
+ExportAction.text=Eksport mapy...
 ExportBranchAction.text=Przenie\u015B ga\u0142\u0105\u017A do nowej mapy...
 ExportBranchToHTMLAction.text=Ga\u0142\u0105\u017A do dokumentu HTML...
 exported_file=Plik {0}
