--- a/freeplane/resources/translations/Resources_pt_BR.properties
+++ b/freeplane/resources/translations/Resources_pt_BR.properties
@@ -82,8 +82,8 @@ antialias_all=Suavizar tudo
 antialias_edges=Suavizar bordas
 antialias_none=Sem suaviza\u00E7\u00E3o
 apply=&Aplicar
-ApplyAction.text=&Aplicar
-ApplyFormatPlugin.text=&Muda a formata\u00E7\u00E3o ...
+ApplyAction.text=Aplicar
+ApplyFormatPlugin.text=Muda a formata\u00E7\u00E3o ...
 ApplyFormatPlugin.tooltip=Mostra um quadro de di\u00E1logo onde os atributos dos n\u00F3s e das bordas podem ser alterado ao mesmo tempo.
 ApplyNoFilteringAction.text=Sem filtragem
 ApplySelectedViewConditionAction.text=Filtra os n\u00F3s selecionados
@@ -142,7 +142,7 @@ AutomaticLayout.ALL=para todos os n\u00F3s
 AutomaticLayout.HEADINGS=Para n\u00F3s que n\u00E3o sejam do tipo folha
 AutomaticLayout.level=N\u00EDvel {0}
 AutomaticLayout.level.root=Raiz
-AutomaticLayoutAction.text=&Aplicar estilos de n\u00EDvel
+AutomaticLayoutAction.text=Aplicar estilos de n\u00EDvel
 AutomaticLayoutAction.tooltip=<html>Corrige o layout do mapa. <br>O primeiro n\u00EDvel \u00E9 preto, o segundo azul, etc</html>
 AutomaticLayoutControllerAction.ALL.text=para todos os n\u00F3s
 AutomaticLayoutControllerAction.HEADINGS.text=para n\u00F3s diferentes do tipo folha
@@ -167,7 +167,7 @@ can_not_delete_root_style=N\u00E3o \u00E9 poss\u00EDvel apagar estilo raiz
 can_not_delete_style_group=N\u00E3o \u00E9 poss\u00EDvel apagar de grupo de estilo
 can_not_save_key_set=N\u00E3o \u00E9 poss\u00EDvel salvar a defini\u00E7\u00E3o da tecla de atalho
 cancel=&Cancelar
-CancelAction.text=&Cancelar
+CancelAction.text=Cancelar
 cannot_add_parent_diff_parents=Para usar esta fun\u00E7\u00E3o, \u00E9 necess\u00E1rio que todos os n\u00F3s tenham o mesmo pai.
 cannot_add_parent_to_root=O n\u00F3 raiz n\u00E3o pode ser adicionado a um novo pai.
 cannot_delete_root=O n\u00F3 raiz n\u00E3o pode ser apagado ou cortado.
@@ -197,7 +197,7 @@ choose_node_color=Escolha a cor do n\u00F3:
 ClearLinkAnchorAction.text=Limpar a \u00E2ncora do link
 ClearLinkAnchorAction.tooltip=<html>Limpar a \u00E2ncora do conjunto de n\u00F3s anterior</html>
 close_btn=&Fechar
-CloseAction.text=&Fechar mapa atual
+CloseAction.text=Fechar mapa atual
 CloudAction.text=Adicionar / remover nuvem (padr\u00E3o)
 CloudColorAction.text=Cor da nuvem...
 CloudShapeAction.ARC.text=Arco
@@ -214,10 +214,10 @@ connector_label=R\u00F3tulo de conex\u00E3o
 connector_lines=Linhas de conex\u00E3o
 connector_shapes=Formas de conex\u00E3o
 ConnectorColorAction.text=Cor de conector...
-CopyAction.text=&Copiar
+CopyAction.text=Copiar
 CopyAction.tooltip=Copiar galho selecionado
-CopyAttributes.text=Copiar &atributos
-CopyIDAction.text=Copiar I&D do n\u00F3
+CopyAttributes.text=Copiar atributos
+CopyIDAction.text=Copiar ID do n\u00F3
 CopyMapStylesAction.text=Copiar estilo do mapa de...
 CopyNodeURIAction.text=Copiar URI do n\u00F3
 copyright=Direitos autorais 2000-2014 Time Freeplane e outros
@@ -333,7 +333,7 @@ export_failed=A exporta\u00E7\u00E3o falhou
 export_pdf_text=Portable Document Format (PDF)
 export_svg_text=Scalable Vector Graphic (SVG)
 export_using_xslt=Exporta\u00E7\u00E3o de arquivo freeplane
-ExportAction.text=&Exportar mapa...
+ExportAction.text=Exportar mapa...
 ExportBranchAction.text=Mover ramos para novo mapa...
 ExportBranchToHTMLAction.text=Galho como HTML
 exported_file={0} arquivos
@@ -442,7 +442,7 @@ FindAction.text=Procurar...
 fit_map_to_page=&Ajustar para uma p\u00E1gina
 fit_map_to_page_height=Ajustar &altura para uma p\u00E1gina
 fit_map_to_page_width=Ajustar &largura para uma p\u00E1gina
-FitToPage.text=Amplia para &caber na p\u00E1gina
+FitToPage.text=Amplia para caber na p\u00E1gina
 FitToPage.tooltip=Ajusta a amplia\u00E7\u00E3o de modo que o mapa todo caiba na janela atual.
 fold=Recolher
 FoldAllAction.text=Recolher tudo
@@ -670,7 +670,7 @@ italicise_branch=It\u00E1lico
 java_version=Vers\u00E3o do java: {0}
 latex_editor=Editor LaTeX
 LatexDeleteLatexAction.text=Remover f\u00F3rmula LaTeX
-LatexEditLatexAction.text=Editar f\u00F3rmula &LaTeX...
+LatexEditLatexAction.text=Editar f\u00F3rmula LaTeX...
 LatexInsertLatexAction.msg1=<html>Voc\u00EA est\u00E1 tentando inserir uma f\u00F3rmula <i>legacy</i> do LaTeX.<br/> A nova maneira de se criar um texto ou f\u00F3rmula LaTeX est\u00E1 descrito na p\u00E1gina: </html>
 LatexInsertLatexAction.msg2=<html>Em resumo: <ul><li>use um prefixo "\\latex" no n\u00F3 de texto ou</li><li><i>Vizualizar->Painel de Propriedades</i>, em seguida <i>Texto Principal->Formatar->LaTeX</i></li></ul></html>
 LatexInsertLatexAction.text=Adicionar f\u00F3rmula LaTeX...
@@ -729,8 +729,8 @@ ManageAddOnsDialog.tab.manage.themes=Temas
 ManageAddOnsDialog.tab.manage.themes.tooltip=Gerenciar temas instalados
 ManageAddOnsDialog.tab.manage.tooltip=Gerenciar adicionais instalados
 ManageAddOnsDialog.visit.addon.page=Visitar a p\u00E1gina do adicional...
-ManageConditionalStylesAction.text=&Gerenciar estilos condicionais para mapa
-ManageNodeConditionalStylesAction.text=&Gerenciar estilos condicionais para n\u00F3
+ManageConditionalStylesAction.text=Gerenciar estilos condicionais para mapa
+ManageNodeConditionalStylesAction.text=Gerenciar estilos condicionais para n\u00F3
 map_already_exists=Esse mapa j\u00E1 existe. Voc\u00EA gostaria de sobrescrev\u00EA-lo?
 map_corrupted=Mapa corrompido. Ver detalhes?
 map_load_error=N\u00E3o foi poss\u00EDvel carregar o mapa {0}
@@ -795,7 +795,7 @@ navigate=&Navegar
 NavigationNextMapAction.text=Pr\u00F3ximo mapa
 NavigationPreviousMapAction.text=Mapa anterior
 new=&Novo
-new_map_from_user_templates.text=Novo mapa a partir do &Modelo...
+new_map_from_user_templates.text=Novo mapa a partir do Modelo...
 new_mindmap=Novo mapa da mente
 new_node=Novo n\u00F3
 new_node_as_sibling_not_possible_for_the_root=N\u00E3o \u00E9 poss\u00EDvel um novo n\u00F3 irm\u00E3o a partir da ra\u00EDz
@@ -1323,7 +1323,7 @@ overwrite_keyset_question=Substituir o conjunto de chaves existente?
 PageAction.text=Configurar impress\u00E3o...
 password_is_not_ascii=Senha n\u00E3o \u00E9 ASCII
 PasteAction.text=Colar
-PasteAttributes.text=Colar at&ributos
+PasteAttributes.text=Colar atributos
 PatternNewNameProperty=Novo padr\u00E3o
 PatternToString.backgroundColor=Cor de fundo
 PatternToString.Child=Estilo de n\u00F3 filho
@@ -1440,14 +1440,14 @@ RequestFeatureAction.text=Solicitar um recurso
 reset_to_default=Usar padr\u00E3o
 ResetNodeLocationAction.text=Redefinir posi\u00E7\u00E3o
 ResetStyleAction.text=Redefinir estilo de n\u00F3
-RevertAction.text=&Restaurar do local hist\u00F3rico
-RevisionPluginAction.text=Mudan\u00E7a e &revis\u00E3o da cor de fundo
+RevertAction.text=Restaurar do local hist\u00F3rico
+RevisionPluginAction.text=Mudan\u00E7a e revis\u00E3o da cor de fundo
 save_failed=Tentativa de salvar o mapa {0} falhou.
 save_unsaved=Salvar o seguinte mapa da mente?
 save_unsaved_styles=Salvar estilo?
 SaveAcceleratorPresetsAction.text=Salvar conjunto de teclas de atalho ...
 SaveAction.text=Salvar
-SaveAll.text=Sa&lvar todos os mapas abertos
+SaveAll.text=Salvar todos os mapas abertos
 SaveAll.tooltip=Salvar todos os mapas abertos
 SaveAsAction.text=Salvar como...
 saved=Salvo
@@ -1685,7 +1685,7 @@ simplyhtml.valignMiddle=Meio
 simplyhtml.valignTop=Topo
 simplyhtml.wholeWordsOnly=Apenas palavras inteiras
 simplyhtml.wholeWordsOnly.tooltip=Restringir correspond\u00EAncia de palavras inteiras.
-SortNodes.text=Ordenar filho&s
+SortNodes.text=Ordenar filhos
 SortNodes.tooltip=Ordena todos os filhos de um n\u00F3 alfabeticamente.
 split=Dividir
 SplitConditionAction.text=Dividir
