--- a/freeplane/resources/translations/Resources_sl.properties
+++ b/freeplane/resources/translations/Resources_sl.properties
@@ -938,9 +938,9 @@ ToggleChildrenFoldedAction.text=(Raz)postri otroke
 ToggleFBarAction.text=F-Bar[translate me]
 ToggleFoldedAction.text=Preklopi prepognjene
 ToggleFullScreenAction.text=Full screen mode[translate me]
-ToggleLeftToolbarAction.text=&Drugotna vrstica
+ToggleLeftToolbarAction.text=Drugotna vrstica
 ToggleMenubarAction.text=Menijska vrstica
-ToggleToolbarAction.text=&Orodna vrstica
+ToggleToolbarAction.text=Orodna vrstica
 undefined_error=Pri\u0161lo je do nepri\u010Dakovane napake. Prosimo poskusite oddati poro\u010Dilo o hro\u0161\u010Du.
 underline=Pod\u010Drtano
 underlined=Pod\u010Drtano
