--- a/freeplane/resources/translations/Resources_sv.properties
+++ b/freeplane/resources/translations/Resources_sv.properties
@@ -224,7 +224,7 @@ export_failed=Exporten misslyckades
 export_pdf_text=Portable Document Format (PDF)
 export_svg_text=Scalable Vector Graphic (SVG)
 export_using_xslt=Exportera med XSLT
-ExportAction.text=&Exportera
+ExportAction.text=Exportera
 ExportBranchAction.text=Gren som ny karta...
 ExportBranchToHTMLAction.text=Gren som HTML
 exported_file={0} fil
