--- a/freeplane/resources/translations/Resources_zh_CN.properties
+++ b/freeplane/resources/translations/Resources_zh_CN.properties
@@ -81,15 +81,15 @@ antialias_all=\u5E73\u6ED1\u5168\u90E8
 antialias_edges=\u5E73\u6ED1\u8FDE\u7EBF
 antialias_none=\u4E0D\u5E73\u6ED1
 apply=\u5E94\u7528(&A)
-ApplyAction.text=\u5E94\u7528(&A)
-ApplyFormatPlugin.text=\u6539\u53D8\u683C\u5F0F(&C)...
+ApplyAction.text=\u5E94\u7528(A)
+ApplyFormatPlugin.text=\u6539\u53D8\u683C\u5F0F(C)...
 ApplyFormatPlugin.tooltip=\u663E\u793A\u8282\u70B9\u53CA\u8FDE\u7EBF\u5C5E\u6027\u8BBE\u5B9A\u5BF9\u8BDD\u6846.
 ApplyNoFilteringAction.text=\u4E0D\u8FC7\u6EE4
 ApplySelectedViewConditionAction.text=\u8FC7\u6EE4\u9009\u4E2D\u7684\u8282\u70b9
 ApplyToVisibleAction.text=\u5E94\u7528\u5230\u8FC7\u6EE4\u7684\u8282\u70b9
 as_parent=\u540C\u7236\u8282\u70B9
 AskForHelp.text=\u8BF7\u6C42\u5E2E\u52a9
-AssignAttributesAction.text=\u6307\u5B9A\u5C5E\u6027(&G)...
+AssignAttributesAction.text=\u6307\u5B9A\u5C5E\u6027(G)...
 attribute_delete=\u5220\u9664\u6240\u6709\u503C
 attribute_delete_value=\u5220\u9664\u6B64\u503C
 attribute_font_size_tooltip=\u5C5E\u6027\u5B57\u4F53\u5927\u5C0F
@@ -166,7 +166,7 @@ can_not_delete_root_style=\u4E0D\u80FD\u5220\u9664\u6839\u6837\u5f0f
 can_not_delete_style_group=\u4E0D\u80FD\u5220\u9664\u6837\u5F0F\u7ec4
 can_not_save_key_set=\u65E0\u6CD5\u4FDD\u5B58\u70ED\u952E\u96c6
 cancel=\u53D6\u6D88(&C)
-CancelAction.text=\u53D6\u6D88(&C)
+CancelAction.text=\u53D6\u6D88(C)
 cannot_add_parent_diff_parents=\u6240\u6709\u8282\u70B9\u5FC5\u987B\u6709\u76F8\u540C\u7684\u7236\u8282\u70B9\u624D\u80FD\u5E94\u7528\u6B64\u529F\u80FD\u3002
 cannot_add_parent_to_root=\u6839\u8282\u70B9\u4E0D\u80FD\u6DFB\u52A0\u65B0\u7684\u7236\u8282\u70B9\u3002
 cannot_delete_root=\u6839\u8282\u70B9\u4E0D\u80FD\u5220\u9664\u6216\u526A\u5207.
@@ -213,9 +213,9 @@ connector_label=\u8FDE\u63A5\u5668 \u6807\u7b7e
 connector_lines=\u8FDE\u63A5\u5668 \u76F4\u7ebf
 connector_shapes=\u8FDE\u63A5\u5668 \u5F62\u72b6
 ConnectorColorAction.text=\u8FDE\u63A5\u5668 \u989C\u8272
-CopyAction.text=\u590D\u5236(&C)
+CopyAction.text=\u590D\u5236(C)
 CopyAction.tooltip=\u590D\u5236\u9009\u5B9A\u5206\u652f
-CopyAttributes.text=\u590D\u5236\u5C5E\u6027(&a)
+CopyAttributes.text=\u590D\u5236\u5C5E\u6027(a)
 CopyIDAction.text=\u590D\u5236\u8282\u70B9ID
 CopyMapStylesAction.text=\u4ECE...\u5BFC\u56FE\u6837\u5F0F\u590D\u5236
 CopyNodeURIAction.text=\u590D\u5236\u8282\u70B9URI
@@ -230,7 +230,7 @@ CreateNotSatisfiedConditionAction.text=\u975e
 CreationModificationPluginAction.text=\u663E\u793A\u4FEE\u6539\u65F6\u95F4(&M)
 CreationModificationPluginAction.tooltip=<html>\u8FD9\u4E2A\u529F\u80FD\u8DDF\u8E2A\u4FDD\u7559\u8282\u70B9\u7684\u521B\u5EFA\u66F4\u6539\u65F6\u95F4.</html>
 current_dir=\u5BFC\u56fe
-CutAction.text=\u526A\u5207(&t)
+CutAction.text=\u526A\u5207(t)
 decrease_branch_font_size=\u7F29\u5C0F\u5B57\u4F53
 DecreaseNodeFontAction.text=\u7F29\u5C0F\u5B57\u4F53
 default=\u9ED8\u8ba4
@@ -330,7 +330,7 @@ export_failed=\u5BFC\u51FA\u5931\u8d25
 export_pdf_text=Portable Document Format (PDF)
 export_svg_text=Scalable Vector Graphic (SVG)
 export_using_xslt=Freeplane\u4F7F\u7528XSLT\u5BFC\u51fa
-ExportAction.text=\u5BFC\u51FA(&E)
+ExportAction.text=\u5BFC\u51FA(E)
 ExportBranchAction.text=\u5C06\u5206\u679D\u53E6\u5B58\u4E3A\u65B0\u7684\u601D\u7EF4\u5BFC\u56FE...
 ExportBranchToHTMLAction.text=\u5BFC\u51FA\u5206\u679D\u4E3A HTML
 exported_file={0} \u6587\u4ef6
@@ -646,7 +646,7 @@ image_covertLink=\u5C06\u94FE\u63A5\u8F6C\u5316\u6210\u56FE\u7247
 ImageFlavorHandler=\u56FE\u7247(\u4F7F\u7528\u4E0D\u540C\u7684\u6587\u4EF6)
 import=\u5BFC\u5165(&M)
 import_linked_branch_no_link=\u9009\u4E2D\u7684\u8282\u70B9\u6CA1\u6709\u8FDE\u63A5\u53EF\u4EE5\u5BFC\u5165\u3002
-ImportAction.text=\u5BFC\u5165(&I)
+ImportAction.text=\u5BFC\u5165(I)
 ImportBranchAction.text=\u5206\u679D...
 ImportExplorerFavoritesAction.text=\u6536\u85CF\u5939...
 ImportFolderStructureAction.text=\u76EE\u5F55\u7ED3\u6784...
@@ -850,7 +850,7 @@ not_saved_for_link_error=\u7528\u6587\u4EF6\u9009\u62E9\u5668\u6DFB\u52A0\u6587\
 note_window_location=\u6CE8\u89E3\u7A97\u53E3\u4F4D\u7f6e
 notes=\u6CE8\u89e3
 ok=\u786E\u5B9A(&O)
-OKAction.text=\u786E\u5B9A (&O)
+OKAction.text=\u786E\u5B9A (O)
 OnlineReference.text=\u601D\u7EF4\u5BFC\u56FE\u5728\u7EBF\u6587\u6863
 open_asMindMap=\u601D\u7EF4\u5BFC\u56fe
 OpenAction.text=\u6253\u5F00...
@@ -1414,7 +1414,7 @@ save_unsaved=\u4FDD\u5B58\u4EE5\u4E0B\u601D\u7EF4\u5BFC\u56FE? :
 save_unsaved_styles=\u4FDD\u5B58\u6837\u5F0F\uff1f
 SaveAcceleratorPresetsAction.text=\u4FDD\u5B58\u70ED\u952E\u96c6
 SaveAction.text=\u4FDD\u5B58
-SaveAll.text=\u4FDD\u5B58\u6240\u6709(&A)
+SaveAll.text=\u4FDD\u5B58\u6240\u6709(A)
 SaveAll.tooltip=\u4FDD\u5B58\u6240\u6709\u6253\u5F00\u7684\u5BFC\u56FE.
 SaveAsAction.text=\u53E6\u5B58\u4E3A...
 saved=\u4FDD\u5B58\u5B8C\u6BD5
@@ -1652,7 +1652,7 @@ SortNodes.text=\u6392\u5E8F\u5B50\u8282\u70B9
 SortNodes.tooltip=\u6309\u5B57\u6BCD\u987A\u5E8F\u6392\u5E8F\u6240\u6709\u5B50\u8282\u70B9.
 split=\u62C6\u5206
 SplitConditionAction.text=\u62C6\u5206
-SplitNode.text=\u62C6\u5206\u8282\u70B9(&S)
+SplitNode.text=\u62C6\u5206\u8282\u70B9(S)
 SplitNode.tooltip=<html>\u8282\u70B9\u62C6\u5206</html>
 STANDARD_FORMAT=\u6807\u51c6
 stop_processing=\u505C\u6b62
