--- a/freeplane/resources/translations/Resources_da.properties
+++ b/freeplane/resources/translations/Resources_da.properties
@@ -177,7 +177,7 @@ can_not_delete_style_group=Kan ikke slette stilgruppe
 can_not_encrypt_cloned_node=Kan ikke kryptere klonede noder
 can_not_save_key_set=Kan ikke gemme genvejstaster
 cancel=&Annuller
-CancelAction.text=&Annuller
+CancelAction.text=Annuller
 cannot_add_parent_diff_parents=Alle knudepunkter skal have samme overknudepunkt for at bruge denne funktion.
 cannot_add_parent_to_root=Rod knudepunkt kan ikke tilf\u00F8jes til en ny overknudepunkt.
 cannot_delete_root=Rodknudepunkt kan ikke slettes eller klippes.
@@ -254,7 +254,7 @@ defaultstyle.floating=Flydende knudepunkt
 defaultstyle.note=Note
 delete=Slet
 delete_child=Slet barn
-DeleteAction.text=Fjern n&ode
+DeleteAction.text=Fjern node
 DeleteConditionAction.text=Slet
 DeleteDetailsAction.text=Fjern knudepunkt detaljer
 DeleteLevelStyleAction.text=Fjern niveau typografi
@@ -351,7 +351,7 @@ export_failed=Eksport mislykkedes
 export_pdf_text=Portable Document Format (PDF)
 export_svg_text=Scalable Vector Graphic (SVG)
 export_using_xslt=Freeplane eksport
-ExportAction.text=&Eksporter kort\u2026
+ExportAction.text=Eksporter kort\u2026
 ExportBranchAction.text=Flyt forgrening til ny MindMap\u2026
 ExportBranchToHTMLAction.text=Forgrening som HTML
 exported_file={0} fil
@@ -678,7 +678,7 @@ ImportBranchAction.text=Forgrening\u2026
 ImportExplorerFavoritesAction.text=Explorer favoritter\u2026
 ImportFolderStructureAction.text=Mappestruktur\u2026
 ImportLinkedBranchAction.text=Linked forgrening
-ImportLinkedBranchWithoutRootAction.text=Sammenk\u00E6det gren &uden rod\u2026
+ImportLinkedBranchWithoutRootAction.text=Sammenk\u00E6det gren uden rod\u2026
 ImportMindmanagerFiles.text=MindManager X5 MindMap\u2026
 ImportXmlFile.text=Importer XML-fil
 increase_branch_font_size=St\u00F8rre skrifttype
@@ -694,11 +694,11 @@ italicise_branch=Kursiv\u00E9r
 java_version=Java-version: {0}
 lastOpenedMaps=Seneste MindMap
 latex_editor=Rediger LaTeX formel
-LatexDeleteLatexAction.text=Fjern LaTe&X-formular
-LatexEditLatexAction.text=Redig\u00E9r &LaTeX-formular...
+LatexDeleteLatexAction.text=Fjern LaTeX-formular
+LatexEditLatexAction.text=Redig\u00E9r LaTeX-formular...
 LatexInsertLatexAction.msg1=<html>Du fors\u00F8ger at inds\u00E6tte en <i>\u00E6ldre</i> LaTeX formel.<br/>Den nye m\u00E5de at skabe LaTeX tekst/formler er beskrevet p\u00E5 denne side:</html>
 LatexInsertLatexAction.msg2=<html>Kort sagt: <ul><li>brug "\\latex" pr\u00E6fiks i knudepunktsteksten eller </li><li><i> panel Vis-> Egenskaber</i>, derefter<i>Core tekst ->Format->Latex</i></li></ul></html>
-LatexInsertLatexAction.text=Tilf\u00F8j &LaTeX-formular...
+LatexInsertLatexAction.text=Tilf\u00F8j LaTeX-formular...
 latexPatternFormat=LaTeX
 LengthUnits.cm=cm
 LengthUnits.in=tommer
@@ -760,8 +760,8 @@ ManageAddOnsDialog.tab.manage.themes=Temaer
 ManageAddOnsDialog.tab.manage.themes.tooltip=Administrer installerede temaer
 ManageAddOnsDialog.tab.manage.tooltip=Administrer installerede tilf\u00F8jelsesprogrammer
 ManageAddOnsDialog.visit.addon.page=Bes\u00F8g tilf\u00F8jelse side\u2026
-ManageConditionalStylesAction.text=Ad&ministrer betingede typografier for MindMap
-ManageNodeConditionalStylesAction.text=&Administrer betingede typografier for knudepunkter
+ManageConditionalStylesAction.text=Administrer betingede typografier for MindMap
+ManageNodeConditionalStylesAction.text=Administrer betingede typografier for knudepunkter
 map_already_exists=MindMap findes allerede. Vil du overskrive?
 map_background_image=Baggrundsbillede
 map_corrupted=MindMap beskadiget. Se detaljer?
@@ -850,7 +850,7 @@ NewerFileRevisionsFoundDialog.title=Fundet nyere udgaver af {0}!
 NewLevelStyleAction.text=Tilf\u00F8j niveau typografi
 newmap.install.addon.question={0} er tilsyneladende en add-on pakke.\nVil du installere den?\n(V\u00E6lg "Nej" for normal \u00E5ben.)
 newmap.install.addon.title=Installer tilf\u00F8jelse?
-NewMapAction.text=&Ny MindMap
+NewMapAction.text=Ny MindMap
 NewMapViewAction.text=Ny MindMap visning
 NewParentNode.text=Nyt overknudepunkt
 NewParentNode.tooltip=<html>Alt valgt bliver sendt til en ny for\u00E6ldre.</html>
@@ -878,7 +878,7 @@ node_location_help=Tr\u00E6k \u00E6ndrer knudepunkt placering, ctrl+tr\u00E6kke 
 node_selector=Knudepunktsudvalg
 node_selector_message=Dobbeltklik for at v\u00E6lge knudepunkt
 node_styles=Knudepunkt typografi
-NodeBackgroundColorAction.text=&Knudepunkt baggrundsfarve\u2026
+NodeBackgroundColorAction.text=Knudepunkt baggrundsfarve\u2026
 NodeColorAction.text=Knudepunktsfarve\u2026
 NodeColorBlendAction.text=Blandingsfarven
 NodeDownAction.text=Flyt knudepunkt
@@ -888,7 +888,7 @@ NodeListAction.text=S\u00F8g og erstat\u2026
 NodeListAction.tooltip=Viser alle knudepunkter som en s\u00F8gbar liste med filteregenskaber.
 NodeShapeAction.bubble.text=Boble
 NodeShapeAction.circle.text=Cirkel
-NodeShapeAction.fork.text=&Forgrening
+NodeShapeAction.fork.text=Forgrening
 NodeShapeAction.hexagon.text=Sekskant
 NodeShapeAction.hexagon2.text=Sekskant2
 NodeShapeAction.narrow_hexagon.text=Lille sekskant
@@ -910,7 +910,7 @@ NotificationOptions.REMIND_ME_LATER=P\u00E5mind senere
 NotificationOptions.REMOVE_REMINDER=Fjern p\u00E5mindelse
 NotificationOptions.SELECT_NODE=G\u00E5 til p\u00E5mindelse
 ok=&OK
-OKAction.text=&OK
+OKAction.text=OK
 OnlineReference.text=Online MindMap dokumentation
 open_asMindMap=MindMap
 OpenAction.text=\u00C5ben gemt MindMap\u2026
@@ -1478,7 +1478,7 @@ QuickFindAction.BACK.text=Find forrige
 QuickFindAction.FORWARD.text=Find n\u00E6ste
 QuickFindAllAction.text=V\u00E6lg alle matchende knudepunkter
 QuickHighlightAction.text=Fremh\u00E6v alle matchende knudepunkter
-QuitAction.text=&Afslut Freeplane
+QuitAction.text=Afslut Freeplane
 read_only=L\u00E6s kun
 ReadScriptError.text=Fejl ved l\u00E6sning af skript
 really_convert_to_current_version=<html>MindMap blev oprettet med en \u00E6ldre version af Freeplane.<br>Skal det konverteres (anbefales)?<br>(Ellers benyttes det, som det er uden garanti.)</html>
