--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -228,7 +228,7 @@ connector_label=Libell\u00E9 du connecteur
 connector_lines=Trait du connecteur
 connector_shapes=Forme du connecteur
 ConnectorColorAction.text=Couleur du connecteur...
-ConvertCloneToIndependentNodeAction.text=Dupliquer
+ConvertCloneToIndependentNodeAction.text=Ne plus cloner
 CopyAction.text=Copier
 CopyAction.tooltip=Copie la branche s\u00E9lectionn\u00E9e
 CopyAttributes.text=Copier les attributs
@@ -1097,6 +1097,7 @@ OptionPanel.id=Indon\u00E9sien
 OptionPanel.IGNORE=Ne rien faire
 OptionPanel.il__enter_confirms_by_default=La touche "Entr\u00E9e" valide le n\u0153ud
 OptionPanel.image_cache=Pour les images
+OptionPanel.indentationUsesTabsInTextOutput=Utiliser les tabulations dans les zones de saisie
 OptionPanel.it=Italien
 OptionPanel.ja=Japonais
 OptionPanel.JoinNodesAction.textSeparators=S\u00E9parateur de texte
@@ -1605,7 +1606,7 @@ SetShortenerStateAction.text=R\u00E9sumer le n\u0153ud
 sf_login_required=Voulez-vous continuer ? (compte SourceForge requis)
 ShowAllAttributesAction.text=Afficher tous les attributs
 ShowAncestorsAction.text=Afficher les p\u00E8res des n\u0153uds filtr\u00E9s
-ShowAttributeDialogAction.text=Gestionnaire d'&attributs...
+ShowAttributeDialogAction.text=Gestionnaire d'attributs...
 ShowDescendantsAction.text=Afficher les fils des n\u0153uds filtr\u00E9s
 ShowFilterToolbarAction.text=Barre de filtres
 ShowFormatPanel.text=Panneau de propri\u00E9t\u00E9s
@@ -1859,7 +1860,7 @@ ToggleDetailsAction.text=Afficher les d\u00E9tails
 ToggleFBarAction.text=Barre des touches de fonction
 ToggleFoldedAction.text=Plier/D\u00E9plier le n\u0153ud
 ToggleFullScreenAction.text=Plein \u00E9cran
-ToggleLeftToolbarAction.text=Barre d'&ic\u00F4nes
+ToggleLeftToolbarAction.text=Barre d'ic\u00F4nes
 ToggleMenubarAction.text=Barre de menus
 ToggleScrollbarsAction.text=Barres de d\u00E9filement
 ToggleStatusAction.text=Barre d'\u00E9tat
