--- a/freeplane/resources/translations/Resources_hu.properties
+++ b/freeplane/resources/translations/Resources_hu.properties
@@ -84,8 +84,8 @@ antialias_all=Minden elem \u00E9lsim\u00EDt\u00E1sa
 antialias_edges=\u00C9lek \u00E9lsim\u00EDt\u00E1sa
 antialias_none=Ne sim\u00EDtson
 apply=&Alkalmaz
-ApplyAction.text=&Alkalmaz
-ApplyFormatPlugin.text=Form\u00E1tum &m\u00F3dos\u00EDt\u00E1sa...
+ApplyAction.text=Alkalmaz
+ApplyFormatPlugin.text=Form\u00E1tum m\u00F3dos\u00EDt\u00E1sa...
 ApplyFormatPlugin.tooltip=Megjelen\u00EDt egy p\u00E1rbesz\u00E9dablakot, melyben a pont \u00E9s \u00E9l attrib\u00FAtumok egy l\u00E9p\u00E9sben m\u00F3dos\u00EDthat\u00F3k.
 ApplyNoFilteringAction.text=Nincs sz\u0171r\u00E9s
 ApplySelectedViewConditionAction.text=Sz\u0171r\u00E9s a kiv\u00E1lasztott pontokra
@@ -148,7 +148,7 @@ AutomaticLayout.ALL=minden pontra
 AutomaticLayout.HEADINGS=a nem-lev\u00E9l pontokra
 AutomaticLayout.level={0}. szint
 AutomaticLayout.level.root=Gy\u00F6k\u00E9r
-AutomaticLayoutAction.text=Szintst\u00EDlusok &alkalmaz\u00E1sa
+AutomaticLayoutAction.text=Szintst\u00EDlusok alkalmaz\u00E1sa
 AutomaticLayoutAction.tooltip=<html>A t\u00E9rk\u00E9p megjelen\u00E9s\u00E9t egys\u00E9ges\u00EDti. <br>Az els\u0151 szint fekete lesz, a m\u00E1sodik k\u00E9k, stb.</html>
 AutomaticLayoutControllerAction.ALL.text=minden pontra
 AutomaticLayoutControllerAction.COLUMNS.text=oszlopokhoz
@@ -224,12 +224,12 @@ connector_shapes=\u00D6sszek\u00F6t\u0151 form\u00E1ja
 ConnectorColorAction.text=\u00D6sszek\u00F6t\u0151 sz\u00EDne...
 CopyAction.text=M\u00E1sol\u00E1s
 CopyAction.tooltip=Az kijel\u00F6lt pont \u00E9s alatta a teljes \u00E1g m\u00E1sol\u00E1sa v\u00E1g\u00F3lapra
-CopyAttributes.text=&Attrib\u00FAtumok m\u00E1sol\u00E1sa
+CopyAttributes.text=Attrib\u00FAtumok m\u00E1sol\u00E1sa
 CopyIDAction.text=Pont azonos\u00EDt\u00F3 m\u00E1sol\u00E1sa
 CopyMapStylesAction.text=T\u00E9rk\u00E9pst\u00EDlus m\u00E1sol\u00E1sa...
 CopyNodeURIAction.text=Pont URI m\u00E1sol\u00E1sa
 copyright=Copyright \u00A9 2000-2016 A Freeplane csapata \u00E9s m\u00E1sok
-CopySingleAction.text=Pont m\u00E1&sol\u00E1sa
+CopySingleAction.text=Pont m\u00E1sol\u00E1sa
 CopySingleAction.tooltip=Csak a kiv\u00E1lasztott pont m\u00E1sol\u00E1sa
 CopyStyleExtensionsAction.text=St\u00EDluspont kiterjeszt\u00E9seinek m\u00E1sol\u00E1sa
 corrupt_map=A t\u00E9rk\u00E9p tartalma s\u00E9r\u00FClt
@@ -251,7 +251,7 @@ defaultstyle.floating=Lebeg\u0151 pont
 defaultstyle.note=Megjegyz\u00E9s
 delete=&T\u00F6rl\u00E9s
 delete_child=Pont t\u00F6rl\u00E9se
-DeleteAction.text=Pon&t elt\u00E1vol\u00EDt\u00E1sa
+DeleteAction.text=Pont elt\u00E1vol\u00EDt\u00E1sa
 DeleteConditionAction.text=T\u00F6rl\u00E9s
 DeleteDetailsAction.text=Pont r\u00E9szletek elt\u00E1vol\u00EDt\u00E1sa
 DeleteLevelStyleAction.text=Szintst\u00EDlus elt\u00E1vol\u00EDt\u00E1sa
@@ -316,7 +316,7 @@ EditLongAction.text=Pont szerkeszt\u00E9se p\u00E1rbesz\u00E9dablakban
 EditNoteInDialogAction.text=Megjegyz\u00E9s szerkeszt\u00E9se p\u00E1rbesz\u00E9dablakban
 EditScript=Szkript szerkeszt\u00E9se...
 EditStylesAction.text=St\u00EDlusok szerkeszt\u00E9se
-EncryptedMap.text=\u00DAj &v\u00E9dett (titkos\u00EDtott) t\u00E9rk\u00E9p...
+EncryptedMap.text=\u00DAj v\u00E9dett (titkos\u00EDtott) t\u00E9rk\u00E9p...
 EncryptedMap.tooltip=\u00DAj v\u00E9dett t\u00E9rk\u00E9p
 encryption=Titkos\u00EDt\u00E1s
 enter_base_url=Most relat\u00EDv linkeket fogok beilleszteni. K\u00E9rem, adja meg a t\u00F6rzs URL-t.
@@ -348,7 +348,7 @@ export_failed=Hib\u00E1s export\u00E1l\u00E1s
 export_pdf_text=Portable Document Format (PDF)
 export_svg_text=Scalable vector graphic (SVG)
 export_using_xslt=Freeplane Export
-ExportAction.text=&Export\u00E1l\u00E1s...
+ExportAction.text=Export\u00E1l\u00E1s...
 ExportBranchAction.text=\u00C1g \u00E1thelyez\u00E9se \u00FAj t\u00E9rk\u00E9pbe...
 ExportBranchToHTMLAction.text=\u00C1g export HTML-k\u00E9nt
 exported_file={0} f\u00E1jl
@@ -388,7 +388,7 @@ FileProperties_NodeSelectionCount=Kijel\u00F6lt pontok sz\u00E1ma:
 FileProperties_TotalFilteredCount=Ennyi pont teljes\u00EDti a sz\u0171r\u0151t:
 FileProperties_TotalLeafCount=Lev\u00E9lpontok sz\u00E1ma \u00F6sszesen:
 FileProperties_TotalNodeCount=Pontok sz\u00E1ma \u00F6sszesen:
-FilePropertiesAction.text=&T\u00E9rk\u00E9p statisztik\u00E1k...
+FilePropertiesAction.text=T\u00E9rk\u00E9p statisztik\u00E1k...
 FileRevisionsDialog.cancel=&M\u00E9gsem
 FileRevisionsDialog.file_last_modified=Id\u0151pont
 FileRevisionsDialog.file_name=F\u00E1jln\u00E9v
@@ -462,7 +462,7 @@ fit_background_to_page=H\u00E1tt\u00E9rk\u00E9p igaz\u00EDt\u00E1sa egy oldalra
 fit_map_to_page=F\u00E9rjen el egy oldalon
 fit_map_to_page_height=&Magass\u00E1g igaz\u00EDt\u00E1sa egy oldalra
 fit_map_to_page_width=&Sz\u00E9less\u00E9g igaz\u00EDt\u00E1sa egy oldalra
-FitToPage.text=&Igaz\u00EDt\u00E1s az ablak m\u00E9ret\u00E9hez
+FitToPage.text=Igaz\u00EDt\u00E1s az ablak m\u00E9ret\u00E9hez
 FitToPage.tooltip=\u00DAgy \u00E1ll\u00EDtja be a nagy\u00EDt\u00E1st, hogy a t\u00E9rk\u00E9p \u00E9ppen elf\u00E9rjen az ablakban.
 fold=Behajt\u00E1s
 FoldAllAction.text=Minden behajt\u00E1sa
@@ -526,7 +526,7 @@ help=&S\u00FAg\u00F3
 HideableAction.tooltip=<html>Minden megv\u00E1ltozott pont h\u00E1ttere megjel\u00F6l\u00E9sre ker\u00FCl.</html>
 HideAllAttributesAction.text=Minden attrib\u00FAtum elrejt\u00E9se
 HierarchicalIcons2Action.text=Mutassa a gyerek ikonok \u00E1tfed\u00E9s\u00E9t
-HierarchicalIconsAction.text=Ikonok &hierarchikus mutat\u00E1sa
+HierarchicalIconsAction.text=Ikonok hierarchikus mutat\u00E1sa
 HierarchicalIconsAction.tooltip=Ha valamelyik (ak\u00E1r k\u00F6zvetett) gyermeken van ikon, kicsiny\u00EDtve megjelenik itt is.
 hot_keys=Gyorsbillenty\u0171k
 hot_keys_table=Gyorsbillenty\u0171k t\u00E1bl\u00E1zata
@@ -673,13 +673,13 @@ image_covertLink=Hivatkoz\u00E1s konvert\u00E1l\u00E1sa k\u00E9pp\u00E9
 ImageFlavorHandler=K\u00E9p (haszn\u00E1ljon k\u00FCl\u00F6n f\u00E1jlt)
 import=I&mport\u00E1l\u00E1s
 import_linked_branch_no_link=A kijel\u00F6lt pont nem tartalmaz olyan import\u00E1lhat\u00F3 linket.
-ImportAction.text=&Import\u00E1l\u00E1s
+ImportAction.text=Import\u00E1l\u00E1s
 ImportBranchAction.text=&\u00C1g...
-ImportExplorerFavoritesAction.text=&B\u00F6ng\u00E9sz\u00F5 kedvencek...
-ImportFolderStructureAction.text=&Mappastrukt\u00FAra...
-ImportLinkedBranchAction.text=&Hivatkozott \u00E1g import\u00E1l\u00E1sa
-ImportLinkedBranchWithoutRootAction.text=Hivatkozott \u00E1g &gy\u00F6k\u00E9rpont n\u00E9lk\u00FCl...
-ImportMindmanagerFiles.text=&MindManager X5 t\u00E9rk\u00E9p...
+ImportExplorerFavoritesAction.text=B\u00F6ng\u00E9sz\u00F5 kedvencek...
+ImportFolderStructureAction.text=Mappastrukt\u00FAra...
+ImportLinkedBranchAction.text=Hivatkozott \u00E1g import\u00E1l\u00E1sa
+ImportLinkedBranchWithoutRootAction.text=Hivatkozott \u00E1g gy\u00F6k\u00E9rpont n\u00E9lk\u00FCl...
+ImportMindmanagerFiles.text=MindManager X5 t\u00E9rk\u00E9p...
 increase_branch_font_size=Nagyobb bet\u0171
 IncreaseNodeFontAction.text=Nagyobb bet\u0171
 internal_error_tooltip=Bels\u0151 hiba t\u00F6rt\u00E9nt. Tov\u00E1bbi inform\u00E1ci\u00F3\u00E9rt kattintson a legut\u00F3bbi log.0 napl\u00F3f\u00E1jl megnyit\u00E1s\u00E1hoz.
@@ -693,11 +693,11 @@ italicise_branch=D\u0151ltt\u00E9
 java_version=Java verzi\u00F3: {0}
 lastOpenedMaps=Legut\u00F3bbi t\u00E9rk\u00E9pek
 latex_editor=LaTeX Formula szerkeszt\u00E9se
-LatexDeleteLatexAction.text=LaTe&X formula elt\u00E1vol\u00EDt\u00E1sa
-LatexEditLatexAction.text=&LaTeX formula szerkeszt\u00E9se...
+LatexDeleteLatexAction.text=LaTeX formula elt\u00E1vol\u00EDt\u00E1sa
+LatexEditLatexAction.text=LaTeX formula szerkeszt\u00E9se...
 LatexInsertLatexAction.msg1=<html>Egy <i>elavult</i> LaTeX formul\u00E1t pr\u00F3b\u00E1l besz\u00FArni.<br/>A LaTeX sz\u00F6veg/formula l\u00E9trehoz\u00E1s\u00E1nak \u00FAj m\u00F3dszere itt olvashat\u00F3:</html>
 LatexInsertLatexAction.msg2=<html>R\u00F6viden: <ul><li>haszn\u00E1ljon "\\latex " prefixet a pont sz\u00F6veg\u00E9ben vagy</li><li><i>N\u00E9zet->Jellemz\u0151k panel</i>, majd <i>T\u00F6rzssz\u00F6veg->Form\u00E1tum->LaTeX</i></li></ul></html>
-LatexInsertLatexAction.text=&LaTeX formula hozz\u00E1ad\u00E1sa...
+LatexInsertLatexAction.text=LaTeX formula hozz\u00E1ad\u00E1sa...
 latexPatternFormat=LaTeX
 LengthUnits.cm=cm
 LengthUnits.in="
@@ -759,8 +759,8 @@ ManageAddOnsDialog.tab.manage.themes=T\u00E9m\u00E1k
 ManageAddOnsDialog.tab.manage.themes.tooltip=Telep\u00EDtett t\u00E9m\u00E1k kezel\u00E9se
 ManageAddOnsDialog.tab.manage.tooltip=Telep\u00EDtett kiterjeszt\u00E9sek kezel\u00E9se
 ManageAddOnsDialog.visit.addon.page=Kiterjeszt\u00E9sek oldal\u00E1nak felkeres\u00E9se...
-ManageConditionalStylesAction.text=&T\u00E9rk\u00E9p felt\u00E9teles st\u00EDlusainak kezel\u00E9se
-ManageNodeConditionalStylesAction.text=&Pont felt\u00E9teles st\u00EDlusainak kezel\u00E9se
+ManageConditionalStylesAction.text=T\u00E9rk\u00E9p felt\u00E9teles st\u00EDlusainak kezel\u00E9se
+ManageNodeConditionalStylesAction.text=Pont felt\u00E9teles st\u00EDlusainak kezel\u00E9se
 map_already_exists=A t\u00E9rk\u00E9p m\u00E1r l\u00E9tezik. Szeretn\u00E9d fel\u00FCl\u00EDrni?
 map_background=T\u00E9rk\u00E9p h\u00E1ttere
 map_background_image=H\u00E1tt\u00E9rk\u00E9p
@@ -832,7 +832,7 @@ navigate=Na&vig\u00E1l\u00E1s
 NavigationNextMapAction.text=K\u00F6vetkez\u0151 t\u00E9rk\u00E9p
 NavigationPreviousMapAction.text=El\u00F5z\u00F5 T\u00E9rk\u00E9p
 new=&\u00DAj
-new_map_from_user_templates.text=\u00DAj &t\u00E9rk\u00E9p sablonb\u00F3l...
+new_map_from_user_templates.text=\u00DAj t\u00E9rk\u00E9p sablonb\u00F3l...
 new_mindmap=\u00DAj elmet\u00E9rk\u00E9p
 new_node=\u00DAj pont
 new_node_as_sibling_not_possible_for_the_root=A gy\u00F6k\u00E9rponthoz nem hozhat\u00F3 l\u00E9tre \u00FAj testv\u00E9rpont
@@ -852,7 +852,7 @@ NewerFileRevisionsFoundDialog.title=\u00DAjabb f\u00E1jlv\u00E1ltozatok tal\u00E
 NewLevelStyleAction.text=Szint t\u00EDpus hozz\u00E1ad\u00E1sa
 newmap.install.addon.question={0} kiterjeszt\u00E9snek t\u0171nik\nSzeretn\u00E9 telep\u00EDteni?\n(V\u00E1lassza a "Nem"-et norm\u00E1l megnyit\u00E1shoz.)
 newmap.install.addon.title=Telep\u00EDti a kiterjeszt\u00E9st?
-NewMapAction.text=\u00DA&j t\u00E9rk\u00E9p
+NewMapAction.text=\u00DAj t\u00E9rk\u00E9p
 NewMapViewAction.text=\u00DAj t\u00E9rk\u00E9pn\u00E9zet
 NewParentNode.text=\u00DAj sz\u00FCl\u0151pont
 NewParentNode.tooltip=<html>A teljes kijel\u00F6l\u00E9s \u00FAj sz\u00FCl\u0151 al\u00E1 ker\u00FCl.</html>
@@ -881,7 +881,7 @@ node_popup_scripting=Szkriptek
 node_selector=Pont kiv\u00E1laszt\u00E1sa
 node_selector_message=Duplakattint\u00E1s a pont kiv\u00E1laszt\u00E1s\u00E1hoz
 node_styles=Pont st\u00EDlusok
-NodeBackgroundColorAction.text=Pont &h\u00E1tt\u00E9rsz\u00EDne...
+NodeBackgroundColorAction.text=Pont h\u00E1tt\u00E9rsz\u00EDne...
 NodeColorAction.text=Pont sz\u00EDne...
 NodeColorBlendAction.text=Kit\u00F6lt\u00E9s sz\u00EDne
 NodeDownAction.text=Pont mozgat\u00E1sa lefel\u00E9
@@ -889,7 +889,7 @@ NodeExtensions.EditNodeExtensions=Pont kiterjeszt\u00E9sek szerkeszt\u00E9se
 NodeExtensions.RemoveNodeExtensions=Pont kiterjeszt\u00E9sek elt\u00E1vol\u00EDt\u00E1sa
 NodeListAction.text=Keres \u00E9s cser\u00E9l...
 NodeListAction.tooltip=Minden pont megjelen\u00EDt\u00E9se kereshet\u0151 listak\u00E9nt sz\u0171r\u00E9si jellemz\u0151kkel.
-NodeShapeAction.bubble.text=&Bubor\u00E9k
+NodeShapeAction.bubble.text=Bubor\u00E9k
 NodeShapeAction.fork.text=El\u00E1gaz\u00E1s
 NodeShapeAction.narrow_hexagon.text=Keskeny hexagon
 NodeShapeAction.oval.text=Ov\u00E1lis
@@ -909,7 +909,7 @@ ok=Rendben
 OKAction.text=Rendben
 OnlineReference.text=Online document\u00E1ci\u00F3s t\u00E9rk\u00E9pek
 open_asMindMap=Elmet\u00E9rk\u00E9p
-OpenAction.text=&Megnyit\u00E1s...
+OpenAction.text=Megnyit\u00E1s...
 OpenFreeplaneSiteAction.text=Freeplane honlap
 OpenMapsAddLocation.text=OpenMaps hely hozz\u00E1ad\u00E1sa...
 OpenMapsRemoveLocation.text=OpenMaps hely t\u00F6rl\u00E9se
@@ -1382,8 +1382,8 @@ org.freeplane.plugin.script.NodeIdHighlighter.node_is_not_defined={0} pont nincs
 out_of_memory=Megtelt a mem\u00F3ria.
 PageAction.text=Oldalbe\u00E1ll\u00EDt\u00E1s...
 password_is_not_ascii=A jelsz\u00F3 nem ASCII
-PasteAction.text=&Beilleszt\u00E9s
-PasteAttributes.text=&Attrib\u00FAtumok beilleszt\u00E9se
+PasteAction.text=Beilleszt\u00E9s
+PasteAttributes.text=Attrib\u00FAtumok beilleszt\u00E9se
 PatternNewNameProperty=\u00DAj minta
 PatternToString.backgroundColor=H\u00E1tt\u00E9rsz\u00EDn
 PatternToString.Child=Gyermek pont st\u00EDlus
@@ -1452,7 +1452,7 @@ print_preview_title=Ny&omtat\u00E1si k\u00E9p
 PrintAction.text=Nyomtat\u00E1s...
 PrintDirectAction.text=Nyomtat\u00E1s
 printing_settings=Nyomtat\u00E1s m\u00E9retez\u00E9se
-PrintPreviewAction.text=Ny&omtat\u00E1si k\u00E9p...
+PrintPreviewAction.text=Nyomtat\u00E1si k\u00E9p...
 progress=K\u00E9sz\u00FClts\u00E9gjelz\u0151 ikon (%)
 PropertyAction.dialog=Be\u00E1ll\u00EDt\u00E1sok
 PropertyAction.text=Be\u00E1ll\u00EDt\u00E1sok...
@@ -1461,7 +1461,7 @@ QuickFindAction.BACK.text=El\u0151z\u0151 keres\u00E9se
 QuickFindAction.FORWARD.text=K\u00F6vetkez\u0151 keres\u00E9se
 QuickFindAllAction.text=Minden tal\u00E1lt pont kijel\u00F6l\u00E9se
 QuickHighlightAction.text=Minden tal\u00E1lt pont kiemel\u00E9se
-QuitAction.text=&Kil\u00E9p\u00E9s
+QuitAction.text=Kil\u00E9p\u00E9s
 read_only=Csak olvashat\u00F3
 ReadScriptError.text=Szkript olvas\u00E1si hiba
 really_convert_to_current_version=<html>Ez a t\u00E9rk\u00E9p egy kor\u00E1bbi Freeplane verzi\u00F3val k\u00E9sz\u00FClt. <br>Szeretn\u00E9 konvert\u00E1lni (javasolt)? <br>(M\u00E1sk\u00FCl\u00F6nben jelenlegi form\u00E1j\u00E1ban ker\u00FCl bet\u00F6lt\u00E9sre, mely esetben b\u00E1rmi t\u00F6rt\u00E9nhet.) </html>
@@ -1495,10 +1495,10 @@ replace_shortcut_title=Billenty\u0171kombin\u00E1ci\u00F3 cser\u00E9je
 ReportBugAction.text=Szoftverhiba bejelent\u00E9se
 RequestFeatureAction.text=\u00DAj funkci\u00F3 k\u00E9r\u00E9se
 reset_to_default=Alap\u00E9rtelmezett haszn\u00E1lata
-ResetNodeLocationAction.text=Pont poz\u00EDci\u00F3 &alaphelyzetbe \u00E1ll\u00EDt\u00E1sa
+ResetNodeLocationAction.text=Pont poz\u00EDci\u00F3 alaphelyzetbe \u00E1ll\u00EDt\u00E1sa
 ResetStyleAction.text=Pont st\u00EDlus alaphelyzetbe \u00E1ll\u00EDt\u00E1sa
-RevertAction.text=&Vissza\u00E1ll\u00EDt\u00E1s helyi el\u0151zm\u00E9nyekb\u0151l
-RevisionPluginAction.text=M\u00F3&dos\u00EDt\u00E1sok h\u00E1tt\u00E9rsz\u00EDn\u00E9nek cser\u00E9je
+RevertAction.text=Vissza\u00E1ll\u00EDt\u00E1s helyi el\u0151zm\u00E9nyekb\u0151l
+RevisionPluginAction.text=M\u00F3dos\u00EDt\u00E1sok h\u00E1tt\u00E9rsz\u00EDn\u00E9nek cser\u00E9je
 save_failed=A(z) {0} t\u00E9rk\u00E9p ment\u00E9se sikertelen volt.
 save_unsaved=Menti az al\u00E1bbi elmet\u00E9rk\u00E9pet?
 save_unsaved_styles=Menti a st\u00EDlusokat?
@@ -1506,17 +1506,17 @@ SaveAcceleratorPresetsAction.text=Gyorsbillenty\u0171 profil ment\u00E9se...
 SaveAction.text=Ment\u00E9s
 SaveAction_readonlyMsg=A t\u00E9rk\u00E9p csak \u00EDr\u00E1sv\u00E9dett. K\u00E9rem haszn\u00E1lja a "F\u00E1jl->T\u00E9rk\u00E9p ment\u00E9se mint..." men\u00FCpontot a t\u00E9rk\u00E9p lement\u00E9s\u00E9hez.
 SaveAction_readonlyTitle=K\u00EDs\u00E9rlet \u00EDr\u00E1sv\u00E9dett t\u00E9rk\u00E9p ment\u00E9s\u00E9re
-SaveAll.text=Az \u00F6sszes megny&itott t\u00E9rk\u00E9p ment\u00E9se
+SaveAll.text=Az \u00F6sszes megnyitott t\u00E9rk\u00E9p ment\u00E9se
 SaveAll.tooltip=Lementi az \u00F6sszes megnyitott t\u00E9rk\u00E9pet
 SaveAs_toReadonlyMsg={0} \u00EDr\u00E1sv\u00E9dett. K\u00E9rem mentse egy m\u00E1sik f\u00E1jlba.
 SaveAs_toReadonlyTitle=\u00CDr\u00E1sv\u00E9dett f\u00E1jlra pr\u00F3b\u00E1lt menteni
-SaveAsAction.text=Me&nt\u00E9s m\u00E1sk\u00E9nt...
+SaveAsAction.text=Ment\u00E9s m\u00E1sk\u00E9nt...
 saved=Mentve
 saving_canceled=Ment\u00E9s megszak\u00EDtva
 scanners_not_loaded=A szkennereket nem lehetett bet\u00F6lteni, a f\u00E1jl s\u00E9r\u00FClt
 scheme_evaluate=Hozz\u00E1rendel!
 script_execution_disabled=A szkript futtat\u00E1s le van tiltva. (Eszk\u00F6z\u00F6k/Be\u00E1ll\u00EDt\u00E1sok/Kieg\u00E9sz\u00EDt\u0151k)
-ScriptEditor.text=S&zkript szerkeszt\u00E9se...
+ScriptEditor.text=Szkript szerkeszt\u00E9se...
 ScriptEditor.tooltip=Nagyobb szkriptek \u00EDr\u00E1s\u00E1t teszi lehet\u0151v\u00E9 a Freeplane-ben.
 ScriptEditorPanel.changed_cancel=A szkriptek m\u00F3dosultak. Szeretn\u00E9 elvetni a v\u00E1ltoz\u00E1sokat?
 scripting=Szkriptek
@@ -1531,9 +1531,9 @@ select_folder_for_importing=V\u00E1laszd ki az import\u00E1land\u00F3 mapp\u00E1
 select_icon=V\u00E1lasszon ikont
 select_menu_item_dialog=V\u00E1lasszon egy men\u00FCelemet
 select_menu_item_root_node=Men\u00FC
-SelectAllAction.text=&Minden megjelen\u00EDtett pont kijel\u00F6l\u00E9se
-SelectBranchAction.text=&L\u00E1that\u00F3 \u00E1g kijel\u00F6l\u00E9se
-SelectedPasteAction.text=B&eilleszt\u00E9s mint...
+SelectAllAction.text=Minden megjelen\u00EDtett pont kijel\u00F6l\u00E9se
+SelectBranchAction.text=L\u00E1that\u00F3 \u00E1g kijel\u00F6l\u00E9se
+SelectedPasteAction.text=Beilleszt\u00E9s mint...
 selection_method_by_click=Klikk a kijel\u00F6l\u00E9shez
 selection_method_delayed=K\u00E9sleltetett automatikus kiv\u00E1laszt\u00E1s
 selection_method_direct=R\u00E1mutat\u00E1s a kijel\u00F6l\u00E9shez
@@ -1543,7 +1543,7 @@ set_accelerator_on_next_click_action=\u00DAj billenty\u0171kombin\u00E1ci\u00F3h
 SetAccelerator.dialogTitle=Gyorsbillenty\u0171 hozz\u00E1rendel\u00E9se
 SetAccelerator.keystrokeDetected=A ''{0}'' billenty\u0171 nincs hozz\u00E1rendelve egy men\u00FCelemhez sem.
 SetAcceleratorOnNextClickAction.text=Gyorsbillenty\u0171 be\u00E1ll\u00EDt\u00E1sa...
-SetImageByFileChooserAction.text=K\u00E9&p f\u00E1jlb\u00F3l vagy linkr\u0151l...
+SetImageByFileChooserAction.text=K\u00E9p f\u00E1jlb\u00F3l vagy linkr\u0151l...
 SetLinkAnchorAction.text=Be\u00E1ll\u00EDt\u00E1s horgonynak
 SetLinkAnchorAction.tooltip=<html>a kiv\u00E1lasztott pont be\u00E1ll\u00EDt\u00E1sa horkonynak k\u00E9s\u0151bbi<br/>helyi vagy glob\u00E1lis hivatkoz\u00E1s l\u00E9trehoz\u00E1s\u00E1hoz.
 SetLinkAnchorAction.tooltip_anchored=<html>a kiv\u00E1lasztott pont be\u00E1ll\u00EDt\u00E1sa horgonynak k\u00E9s\u0151bbi<br/>helyi vagy glob\u00E1lis hivatkoz\u00E1s l\u00E9trehoz\u00E1s\u00E1hoz. Jelenlegi horgony:<br/>{0}
@@ -1745,11 +1745,11 @@ simplyhtml.valignMiddle=k\u00F6z\u00E9pre
 simplyhtml.valignTop=fel\u00FClre
 simplyhtml.wholeWordsOnly=Csak teljes szavak
 simplyhtml.wholeWordsOnly.tooltip=A tal\u00E1latok korl\u00E1toz\u00E1sa eg\u00E9sz szavakra.
-SortNodes.text=&Gyermekek rendez\u00E9se
+SortNodes.text=Gyermekek rendez\u00E9se
 SortNodes.tooltip=\u00C1b\u00E9c\u00E9 sorrendbe rendezi a pont minden gyermek\u00E9t.
 split=Sz\u00E9tv\u00E1g\u00E1s
 SplitConditionAction.text=Megbont\u00E1s
-SplitNode.text=Pont &sz\u00E9tbont\u00E1sa
+SplitNode.text=Pont sz\u00E9tbont\u00E1sa
 SplitNode.tooltip=<html>Pont sz\u00E9tv\u00E1lasztva</html>
 STANDARD_FORMAT=Standard
 stop_processing=\u00C1llj
@@ -1803,17 +1803,17 @@ ToggleDetailsAction.text=R\u00E9szletek elrejt\u00E9se
 ToggleFBarAction.text=Funkci\u00F3gomb eszk\u00F6zt\u00E1r
 ToggleFoldedAction.text=Ki/behajt\u00E1s
 ToggleFullScreenAction.text=Teljes k\u00E9perny\u0151s m\u00F3d
-ToggleLeftToolbarAction.text=&Ikon eszk\u00F6zt\u00E1r
+ToggleLeftToolbarAction.text=Ikon eszk\u00F6zt\u00E1r
 ToggleMenubarAction.text=Men\u00FCsor
 ToggleScrollbarsAction.text=G\u00F6rd\u00EDt\u0151s\u00E1vok
 ToggleStatusAction.text=St\u00E1tuszsor megjelen\u00EDt\u00E9se
-ToggleToolbarAction.text=Eszk\u00F6z&t\u00E1r
+ToggleToolbarAction.text=Eszk\u00F6zt\u00E1r
 toolbars=Eszk\u00F6zt\u00E1rak
 undefined_error=V\u00E1ratlan hiba l\u00E9pett fel. K\u00E9rem, pr\u00F3b\u00E1lja meg bejelenteni a hib\u00E1t.
 underline=Al\u00E1h\u00FAz\u00E1s
 UnderlineAction.text=Al\u00E1h\u00FAz\u00E1s
 underlined=Al\u00E1h\u00FAzott
-UndoAction.text=&Visszavon\u00E1s
+UndoAction.text=Visszavon\u00E1s
 UndoFilterAction.text=Sz\u0171r\u00E9s visszavon\u00E1sa
 unfold=Kihajt\u00E1s
 UnfoldAllAction.text=Minden kihajt\u00E1sa
