--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -83,7 +83,7 @@ antialias_all=\u9664\u53BB\u6240\u6709\u92F8\u9F52\u908A
 antialias_edges=\u9664\u53BB\u92F8\u9F52\u908A
 antialias_none=\u4E0D\u9664\u53BB\u92F8\u9F52\u908A
 apply=(&A)\u5957\u7528
-ApplyAction.text=(&A)\u5957\u7528
+ApplyAction.text=(A)\u5957\u7528
 ApplyFormatPlugin.text=\u66F4\u6539\u7BC0\u9EDE\u683C\u5F0F...
 ApplyFormatPlugin.tooltip=\u986F\u793A\u5C0D\u8A71\u7A97\u4EE5\u4FEE\u6539\u7BC0\u9EDE\u548C\u5206\u652F\u7DDA.
 ApplyNoFilteringAction.text=\u4E0D\u7BE9\u9078
@@ -149,7 +149,7 @@ AutomaticLayout.COLUMNS=\u70BA\u6B04\u4F4D
 AutomaticLayout.HEADINGS=\u6A19\u984C
 AutomaticLayout.level=\u7B2C {0} \u5C64\u7BC0\u9EDE\u683C\u5F0F
 AutomaticLayout.level.root=\u4E3B\u7BC0\u9EDE\u683C\u5F0F
-AutomaticLayoutAction.text=(&A)\u81EA\u52D5\u6392\u7248
+AutomaticLayoutAction.text=(A)\u81EA\u52D5\u6392\u7248
 AutomaticLayoutAction.tooltip=<html>\u81EA\u52D5\u8A2D\u5B9A\u6BCF\u5C64\u7BC0\u9EDE\u548C\u5206\u652F\u7DDA\u7684\u683C\u5F0F</html>
 AutomaticLayoutControllerAction.ALL.text=\u5C0D\u6240\u6709\u7BC0\u9EDE
 AutomaticLayoutControllerAction.COLUMNS.text=\u70BA\u6B04\u4F4D
@@ -175,7 +175,7 @@ can_not_delete_root_style=\u7121\u6CD5\u522A\u9664\u6839\u6A23\u5F0F
 can_not_delete_style_group=\u7121\u6CD5\u522A\u9664\u6A23\u5F0F\u7FA4\u7D44
 can_not_save_key_set=\u7121\u6CD5\u5132\u5B58\u5FEB\u901F\u9375\u96C6
 cancel=(&C)\u53D6\u6D88
-CancelAction.text=(&C)\u53D6\u6D88
+CancelAction.text=(C)\u53D6\u6D88
 cannot_add_parent_diff_parents=\u4F7F\u7528\u6B64\u529F\u80FD\u7684\u6240\u6709\u7BC0\u9EDE\u5FC5\u9808\u4F86\u81EA\u540C\u6A23\u7684\u7236\u7BC0\u9EDE\u3002
 cannot_add_parent_to_root=\u4E3B\u7BC0\u9EDE\u4E0D\u80FD\u88AB\u52A0\u5230\u65B0\u7684\u7236\u7BC0\u9EDE\u3002
 cannot_delete_root=\u4E3B\u7BC0\u9EDE\u4E0D\u53EF\u522A\u9664\u6216\u526A\u4E0B\u3002
@@ -206,7 +206,7 @@ ClearLinkAnchorAction.text=\u6E05\u9664\u9023\u7D50\u9328\u9EDE
 ClearLinkAnchorAction.tooltip=<html>\u6E05\u9664\u5148\u524D\u8A2D\u5B9A\u7684\u7BC0\u9EDE\u9328\u9EDE</html>
 CloneAction.text=\u8CBC\u4E0A\u70BA\u8907\u88FD\u54C1
 close_btn=(&C)\u95DC\u9589
-CloseAction.text=(&C)\u95DC\u9589\u76EE\u524D\u5FC3\u667A\u5716
+CloseAction.text=(C)\u95DC\u9589\u76EE\u524D\u5FC3\u667A\u5716
 cloud_shapes=\u96F2\u7684\u5F62\u72C0
 CloudAction.text=\u96F2\u72C0\u5305\u8986
 CloudColorAction.text=\u96F2\u7684\u984F\u8272...
@@ -224,7 +224,7 @@ connector_label=\u9023\u7D50\u7DDA\u6A19\u7C64
 connector_lines=\u9023\u7D50\u7DDA\u7DDA\u689D
 connector_shapes=\u9023\u7D50\u7DDA\u5916\u5F62
 ConnectorColorAction.text=\u9023\u7D50\u7DDA\u984F\u8272...
-CopyAction.text=(&C)\u8907\u88FD
+CopyAction.text=(C)\u8907\u88FD
 CopyAction.tooltip=\u8907\u88FD\u9078\u53D6\u7684\u5206\u652F
 CopyAttributes.text=\u8907\u88FD\u5C6C\u6027
 CopyIDAction.text=\u8907\u88FD\u7BC0\u9EDE\u8EAB\u5206\u78BC (ID)
@@ -238,7 +238,7 @@ corrupt_map=\u5FC3\u667A\u5716\u5167\u5BB9\u6BC0\u640D
 CreateConjunctConditionAction.text=\u548C
 CreateDisjunctConditionAction.text=\u6216
 CreateNotSatisfiedConditionAction.text=\u975E
-CreationModificationPluginAction.text=(&m)\u986F\u793A\u4FEE\u6539\u6642\u9593
+CreationModificationPluginAction.text=(m)\u986F\u793A\u4FEE\u6539\u6642\u9593
 CreationModificationPluginAction.tooltip=<html>\u6B64\u529F\u80FD\u986F\u793A\u7BC0\u9EDE\u5EFA\u7ACB\u548C\u4FEE\u6539\u7684\u6642\u9593\u3002</html>
 current_dir=\u76EE\u524D\u5FC3\u667A\u5716\u76EE\u9304
 CutAction.text=\u526A\u4E0B
@@ -349,7 +349,7 @@ export_failed=\u532F\u51FA\u5931\u6557
 export_pdf_text=PDF\u6A94
 export_svg_text=SVG \u6A94 (\u53EF\u7E2E\u653E\u5411\u91CF\u5716\u5F62\u6A94)
 export_using_xslt=\u4F7F\u7528 XSLT \u532F\u51FA
-ExportAction.text=(&E)\u532F\u51FA\u5FC3\u667A\u5716...
+ExportAction.text=(E)\u532F\u51FA\u5FC3\u667A\u5716...
 ExportBranchAction.text=\u5C07\u5206\u652F\u79FB\u5230\u65B0\u7684\u5FC3\u667A\u5716...
 ExportBranchToHTMLAction.text=\u5C07\u5206\u652F\u4F5C\u6210 HTML
 exported_file=\u532F\u51FA\u7684\u6A94\u6848 {0}
@@ -670,7 +670,7 @@ ImportBranchAction.text=\u532F\u5165\u7279\u5B9A\u5FC3\u667A\u5716\u6210\u5206\u
 ImportExplorerFavoritesAction.text=\u532F\u5165\u6211\u7684\u6700\u611B...
 ImportFolderStructureAction.text=\u532F\u5165\u6A94\u6848\u593E\u7684\u6A94\u6848\u6210\u9023\u7D50\u5206\u652F...
 ImportLinkedBranchAction.text=\u532F\u5165\u9023\u7D50\u6A94\u6848\u6210\u5206\u652F
-ImportLinkedBranchWithoutRootAction.text=(&w)\u5DF2\u9023\u7D50\u7684\u5206\u652F\u7121 root...
+ImportLinkedBranchWithoutRootAction.text=(w)\u5DF2\u9023\u7D50\u7684\u5206\u652F\u7121 root...
 ImportMindmanagerFiles.text=\u532F\u5165 MindManager X5...
 increase_branch_font_size=\u52A0\u5927\u5B57\u578B
 IncreaseNodeFontAction.text=\u52A0\u5927\u5B57\u578B
@@ -685,10 +685,10 @@ italicise_branch=\u659C\u9AD4
 java_version=Java \u7248\u672C: {0}
 latex_editor=\u7DE8\u8F2F LaTeX \u6578\u5B78\u5F0F
 LatexDeleteLatexAction.text=\u79FB\u9664 LaTeX \u6578\u5B78\u5F0F
-LatexEditLatexAction.text=(&L)\u7DE8\u8F2F LaTeX \u6578\u5B78\u5F0F...
+LatexEditLatexAction.text=(L)\u7DE8\u8F2F LaTeX \u6578\u5B78\u5F0F...
 LatexInsertLatexAction.msg1=<html>\u60A8\u5617\u8A66\u63D2\u5165\u4E00\u500B<i>\u820A\u5F0F</i>\u7684 LaTeX \u6578\u5B78\u5F0F\u3002<br/>\u65B0\u65B9\u6CD5\u5EFA\u7ACB LaTeX \u6587\u5B57/\u6578\u5B78\u5F0F\u63CF\u8FF0\u65BC\u6B64\u9801\u9762\u4E0A\uFF1A</html>
 LatexInsertLatexAction.msg2=<html>\u7E3D\u4E4B\uFF1A<ul><li>\u5728\u7BC0\u9EDE\u6587\u5B57\u4F7F\u7528 "\\latex" \u524D\u7DB4\u6216\u662F</li><li><i>\u6AA2\u8996 -> \u6027\u8CEA\u9762\u677F</i>\uFF0C\u7136\u5F8C<i>\u7BC0\u9EDE\u6838\u5FC3 -> \u683C\u5F0F -> Latex</i></li></ul></html>
-LatexInsertLatexAction.text=(&L)\u65B0\u589E LaTeX \u6578\u5B78\u5F0F...
+LatexInsertLatexAction.text=(L)\u65B0\u589E LaTeX \u6578\u5B78\u5F0F...
 latexPatternFormat=LaTeX
 LengthUnits.cm=cm
 LengthUnits.in=in
@@ -749,8 +749,8 @@ ManageAddOnsDialog.tab.manage.themes=\u4E3B\u984C
 ManageAddOnsDialog.tab.manage.themes.tooltip=\u7BA1\u7406\u5B89\u88DD\u7684\u4E3B\u984C
 ManageAddOnsDialog.tab.manage.tooltip=\u7BA1\u7406\u5B89\u88DD\u7684\u9644\u52A0\u5143\u4EF6
 ManageAddOnsDialog.visit.addon.page=\u62DC\u8A2A\u9644\u52A0\u5143\u4EF6\u7DB2\u9801...
-ManageConditionalStylesAction.text=(&M)\u7BA1\u7406\u5FC3\u667A\u5716\u7684\u689D\u4EF6\u6A23\u5F0F
-ManageNodeConditionalStylesAction.text=(&a)\u7BA1\u7406\u7BC0\u9EDE\u689D\u4EF6\u6A23\u5F0F
+ManageConditionalStylesAction.text=(M)\u7BA1\u7406\u5FC3\u667A\u5716\u7684\u689D\u4EF6\u6A23\u5F0F
+ManageNodeConditionalStylesAction.text=(a)\u7BA1\u7406\u7BC0\u9EDE\u689D\u4EF6\u6A23\u5F0F
 map_already_exists=\u6B64\u5FC3\u667A\u5716\u5DF2\u5B58\u5728\uFF0C\u60A8\u8981\u8986\u5BEB\u55CE\uFF1F
 map_corrupted=\u5FC3\u667A\u5716\u640D\u6BC0\uFF0C\u6AA2\u8996\u7D30\u7BC0\u55CE\uFF1F
 map_load_error=\u7121\u6CD5\u7121\u6CD5\u8F09\u5165\u5FC3\u667A\u5716 {0}
@@ -815,7 +815,7 @@ navigate=(&N)\u5C0E\u89BD
 NavigationNextMapAction.text=\u4E0B\u4E00\u5F35\u5FC3\u667A\u5716
 NavigationPreviousMapAction.text=\u4E0A\u4E00\u5F35\u5FC3\u667A\u5716
 new=(&N)\u65B0\u589E
-new_map_from_user_templates.text=(&t)\u7531\u6A23\u7248\u65B0\u589E\u5FC3\u667A\u5716...
+new_map_from_user_templates.text=(t)\u7531\u6A23\u7248\u65B0\u589E\u5FC3\u667A\u5716...
 new_mindmap=\u65B0\u5FC3\u667A\u5716
 new_node=\u65B0\u589E\u7D50\u9EDE
 new_node_as_sibling_not_possible_for_the_root=\u65B0\u7BC0\u9EDE\u4E0D\u80FD\u662F\u4E3B\u7BC0\u9EDE\u7684\u5144\u5F1F\u7BC0\u9EDE
@@ -835,7 +835,7 @@ NewerFileRevisionsFoundDialog.title=\u767C\u73FE\u8F03\u65B0\u7684\u6A94\u6848\u
 NewLevelStyleAction.text=\u65B0\u589E\u968E\u5C64\u6A23\u5F0F
 newmap.install.addon.question={0} \u4F3C\u4E4E\u662F\u4E00\u500B\u9644\u52A0\u5143\u4EF6\n\u60A8\u60F3\u5B89\u88DD\u5B83\u55CE\uFF1F\n(\u9078\u64C7 No \u70BA\u6B63\u5E38\u958B\u555F)
 newmap.install.addon.title=\u5B89\u88DD\u9644\u52A0\u5143\u4EF6\uFF1F
-NewMapAction.text=(&N)\u65B0\u589E\u5FC3\u667A\u5716
+NewMapAction.text=(N)\u65B0\u589E\u5FC3\u667A\u5716
 NewMapViewAction.text=\u6AA2\u8996\u65B0\u7684\u5FC3\u667A\u5716
 NewParentNode.text=\u65B0\u589E\u7236\u7BC0\u9EDE
 NewParentNode.tooltip=<html>\u6240\u6709\u9078\u64C7\u7BC0\u9EDE\u5C07\u88AB\u9001\u5230\u4E00\u500B\u65B0\u7684\u7236\u7BC0\u9EDE.</html>
@@ -863,7 +863,7 @@ node_location_help=\u62D6\u66F3\u53EF\u4EE5\u8B8A\u66F4\u7BC0\u9EDE\u4F4D\u7F6E\
 node_selector=\u7BC0\u9EDE\u9078\u53D6
 node_selector_message=\u96D9\u9EDE\u64CA\u6ED1\u9F20\u4EE5\u9078\u53D6\u7BC0\u9EDE
 node_styles=\u7BC0\u9EDE\u6A23\u5F0F
-NodeBackgroundColorAction.text=(&N)\u7BC0\u9EDE\u80CC\u666F\u984F\u8272...
+NodeBackgroundColorAction.text=(N)\u7BC0\u9EDE\u80CC\u666F\u984F\u8272...
 NodeColorAction.text=\u7BC0\u9EDE\u6587\u5B57\u984F\u8272...
 NodeColorBlendAction.text=\u7BC0\u9EDE\u6587\u5B57\u647B\u548C\u80CC\u666F\u984F\u8272
 NodeDownAction.text=\u5C07\u7BC0\u9EDE\u79FB\u5230\u4E0B\u65B9
@@ -871,8 +871,8 @@ NodeExtensions.EditNodeExtensions=\u7DE8\u8F2F\u7BC0\u9EDE\u5EF6\u4F38\u6027\u8C
 NodeExtensions.RemoveNodeExtensions=\u79FB\u9664\u7BC0\u9EDE\u5EF6\u4F38\u6027\u8CEA
 NodeListAction.text=\u5728\u5FC3\u667A\u5716\u7684\u7BC0\u9EDE\u5217\u8868\u4E2D\u5C0B\u627E\u6216\u53D6\u4EE3 ...
 NodeListAction.tooltip=\u986F\u793A\u6240\u6709\u7BC0\u9EDE\u7684\u5217\u8868, \u53EF\u5C0B\u627E\u6216\u53D6\u4EE3\u7BC0\u9EDE\u5167\u5BB9.
-NodeShapeAction.bubble.text=(&B)\u7BC0\u9EDE\u5916\u89C0\u6539\u6210\u6C23\u6CE1\u6846
-NodeShapeAction.fork.text=(&F)\u7BC0\u9EDE\u5916\u89C0\u6539\u6210\u5E95\u7DDA
+NodeShapeAction.bubble.text=(B)\u7BC0\u9EDE\u5916\u89C0\u6539\u6210\u6C23\u6CE1\u6846
+NodeShapeAction.fork.text=(F)\u7BC0\u9EDE\u5916\u89C0\u6539\u6210\u5E95\u7DDA
 NodeShapeAction.narrow_hexagon.text=\u72F9\u7A84\u516D\u89D2\u5F62
 NodeShapeAction.oval.text=\u6A62\u5713\u5F62
 NodeShapeAction.rectangle.text=\u77E9\u5F62
@@ -888,10 +888,10 @@ not_saved_for_link_error=\u8A2D\u5B9A\u9023\u7D50\u524D\u5FC5\u9808\u5148\u5132\
 note_window_location=\u8A3B\u89E3\u8996\u7A97\u4F4D\u7F6E
 notes=\u8A3B\u89E3
 ok=(&O)\u78BA\u5B9A
-OKAction.text=(&O)\u78BA\u5B9A
+OKAction.text=(O)\u78BA\u5B9A
 OnlineReference.text=\u53C3\u8003\u624B\u518A
 open_asMindMap=\u5FC3\u667A\u5716
-OpenAction.text=(&O)\u958B\u555F\u820A\u6A94...
+OpenAction.text=(O)\u958B\u555F\u820A\u6A94...
 OpenFreeplaneSiteAction.text=Freeplane \u9996\u9801
 OpenMapsAddLocation.text=\u589E\u52A0 OpenMaps \u4F4D\u7F6E...
 OpenMapsRemoveLocation.text=\u79FB\u9664 OpenMaps \u4F4D\u7F6E
@@ -1365,7 +1365,7 @@ out_of_memory=\u8A18\u61B6\u9AD4\u4E0D\u8DB3\u3002
 overwrite_keyset_question=\u8986\u84CB\u73FE\u5B58\u7684\u6309\u9375\u96C6\u55CE\uFF1F
 PageAction.text=\u8A2D\u5B9A\u5217\u5370\u683C\u5F0F...
 password_is_not_ascii=\u5BC6\u78BC\u4E0D\u662F ASCII \u78BC
-PasteAction.text=(&P)\u8CBC\u4E0A
+PasteAction.text=(P)\u8CBC\u4E0A
 PasteAttributes.text=\u8CBC\u4E0A\u5C6C\u6027
 PatternNewNameProperty=\u65B0\u6A23\u677F
 PatternToString.backgroundColor=\u80CC\u666F\u984F\u8272
@@ -1434,10 +1434,10 @@ plugins/TimeManagement.xml_WindowTitle=\u6642\u9593\u7BA1\u7406
 plugins/TimeManagement.xml_WindowTitle_All_Nodes=\u641C\u5C0B\u548C\u53D6\u4EE3
 preferences=\u5C6C\u6027\u8A2D\u5B9A
 print_preview_title=\u9810\u89BD\u5217\u5370
-PrintAction.text=(&P)\u5217\u5370...
+PrintAction.text=(P)\u5217\u5370...
 PrintDirectAction.text=\u5217\u5370
 printing_settings=\u5217\u5370\u8A2D\u5B9A
-PrintPreviewAction.text=(&v)\u9810\u89BD\u5217\u5370...
+PrintPreviewAction.text=(v)\u9810\u89BD\u5217\u5370...
 progress=\u9032\u5C55\u5C0F\u5716\u793A (%)
 PropertyAction.dialog=\u500B\u4EBA\u5316\u8A2D\u5B9A
 PropertyAction.text=\u500B\u4EBA\u5316\u8A2D\u5B9A ...
@@ -1446,7 +1446,7 @@ QuickFindAction.BACK.text=\u5C0B\u627E\u524D\u4E00\u500B
 QuickFindAction.FORWARD.text=\u5C0B\u627E\u4E0B\u4E00\u500B
 QuickFindAllAction.text=\u9078\u53D6\u6240\u6709\u5339\u914D\u7684\u7BC0\u9EDE
 QuickHighlightAction.text=\u5F37\u8ABF\u6240\u6709\u5339\u914D\u7684\u7BC0\u9EDE
-QuitAction.text=(&Q)\u96E2\u958B Freeplane
+QuitAction.text=(Q)\u96E2\u958B Freeplane
 read_only=\u552F\u8B80
 ReadScriptError.text=\u8B80\u6307\u4EE4\u6A94\u6642\u767C\u751F\u932F\u8AA4\n\u8ACB\u6AA2\u67E5\u65E5\u8A8C\u6A94
 really_convert_to_current_version=<html>\u9019\u500B\u5FC3\u667A\u5716\u662F\u820A\u7248\u7684 Freeplane \u6240\u88FD\u4F5C\u3002<br>\u8981\u8F49\u63DB\u55CE (\u5EFA\u8B70)\uFF1F <br>(\u5426\u5247\u7D50\u679C\u7121\u6CD5\u4FDD\u8B49\u3002) </html>
@@ -1457,7 +1457,7 @@ really_remove_notes=\u771F\u7684\u8981\u79FB\u9664\u8A3B\u89E3\u55CE\uFF1F
 ReapplyFilterAction.text=\u91CD\u65B0\u5957\u7528
 red=\u7D05\u8272
 RedefineStyleAction.text=\u91CD\u65B0\u5B9A\u7FA9\u6A23\u5F0F
-RedoAction.text=(&R)\u53D6\u6D88\u5FA9\u539F
+RedoAction.text=(R)\u53D6\u6D88\u5FA9\u539F
 RedoFilterAction.text=\u53D6\u6D88\u5FA9\u539F
 regular_expressions=\u4E00\u822C\u8868\u793A
 ReminderHookAction.text=\u79FB\u9664\u63D0\u9192\u529F\u80FD
@@ -1481,18 +1481,18 @@ replace_shortcut_title=\u53D6\u4EE3\u5FEB\u901F\u9375\uFF1F
 ReportBugAction.text=\u5831\u544A\u4E00\u500B\u932F\u8AA4
 RequestFeatureAction.text=\u8ACB\u6C42\u589E\u52A0\u529F\u80FD
 reset_to_default=\u4F7F\u7528\u5167\u5B9A\u503C
-ResetNodeLocationAction.text=(&p)\u91CD\u8A2D\u7BC0\u9EDE\u4F4D\u7F6E
+ResetNodeLocationAction.text=(p)\u91CD\u8A2D\u7BC0\u9EDE\u4F4D\u7F6E
 ResetStyleAction.text=\u91CD\u8A2D\u7BC0\u9EDE\u6A23\u5F0F
-RevertAction.text=(&R)\u9084\u539F\u81F3\u4E0A\u6B21\u5132\u5B58\u72C0\u614B
+RevertAction.text=(R)\u9084\u539F\u81F3\u4E0A\u6B21\u5132\u5B58\u72C0\u614B
 RevisionPluginAction.text=\u6539\u8B8A\u88AB\u4FEE\u8A02\u7BC0\u9EDE\u7684\u80CC\u666F\u984F\u8272
 save_failed=\u5FC3\u667A\u5716 {0} \u5132\u5B58\u5931\u6557\u3002
 save_unsaved=\u5132\u5B58\u4EE5\u4E0B\u5FC3\u667A\u5716\uFF1F
 save_unsaved_styles=\u5132\u5B58\u6A23\u5F0F\uFF1F
 SaveAcceleratorPresetsAction.text=\u5132\u5B58\u5FEB\u901F\u9375\u96C6...
-SaveAction.text=(&S)\u5B58\u6A94
+SaveAction.text=(S)\u5B58\u6A94
 SaveAction_readonlyMsg=\u9019\u5FC3\u667A\u5716\u662F\u552F\u8B80\u3002\u8ACB\u4F7F\u7528 '\u6A94\u6848->\u53E6\u5B58\u65B0\u6A94...'\u4F86\u5132\u5B58\u9019\u5FC3\u667A\u5716\u3002
 SaveAction_readonlyTitle=\u8A66\u5716\u5132\u5B58\u552F\u8B80\u5FC3\u667A\u5716
-SaveAll.text=(&L)\u5132\u5B58\u6240\u6709\u5DF2\u958B\u555F\u5FC3\u667A\u5716
+SaveAll.text=(L)\u5132\u5B58\u6240\u6709\u5DF2\u958B\u555F\u5FC3\u667A\u5716
 SaveAll.tooltip=\u5132\u5B58\u6240\u6709\u5DF2\u958B\u555F\u5FC3\u667A\u5716
 SaveAs_toReadonlyMsg={0} \u662F\u552F\u8B80\u3002\u8ACB\u5132\u5B58\u70BA\u4E0D\u540C\u7684\u6A94\u6848\u3002
 SaveAs_toReadonlyTitle=\u8A66\u5716\u5132\u5B58\u5230\u552F\u8B80\u6A94\u6848
@@ -1502,7 +1502,7 @@ saving_canceled=\u5132\u5B58\u53D6\u6D88
 scanners_not_loaded=\u6383\u63CF\u5668\u7121\u6CD5\u8F09\u5165\uFF0C\u6A94\u6848\u6BC0\u640D
 scheme_evaluate=\u8A55\u4F30\uFF01
 script_execution_disabled=Script \u57F7\u884C\u88AB\u6291\u6B62\uFF0C\u8ACB\u770B \u5DE5\u5177>\u500B\u4EBA\u5316\u8A2D\u5B9A>\u5916\u639B\u5143\u4EF6
-ScriptEditor.text=(&c)\u6307\u4EE4\u7DE8\u8F2F\u5668...
+ScriptEditor.text=(c)\u6307\u4EE4\u7DE8\u8F2F\u5668...
 ScriptEditor.tooltip=\u5141\u8A31\u5728 Freeplane \u7CFB\u7D71\u5BEB\u5165\u5927\u91CF\u6307\u4EE4\u3002
 ScriptEditorPanel.changed_cancel=\u8A9E\u6CD5\u5DF2\u88AB\u66F4\u52D5\u3002\u8ACB\u554F\u60A8\u8981\u653E\u68C4\u9019\u4E9B\u8B8A\u52D5\u55CE\uFF1F
 scripting_api_generator_legend=\u5716\u4F8B
@@ -1518,7 +1518,7 @@ select_menu_item_dialog=\u9078\u64C7\u9078\u55AE\u9805\u76EE
 select_menu_item_root_node=\u9078\u55AE
 SelectAllAction.text=\u9078\u64C7\u6240\u6709\u53EF\u898B\u7684\u7BC0\u9EDE
 SelectBranchAction.text=\u9078\u64C7\u6574\u500B\u53EF\u898B\u7684\u5206\u652F
-SelectedPasteAction.text=(&a)\u8CBC\u6210...
+SelectedPasteAction.text=(a)\u8CBC\u6210...
 selection_method_by_click=\u55AE\u9EDE\u64CA\u6ED1\u9F20\u5DE6\u9375\u9078\u53D6
 selection_method_delayed=\u6ED1\u9F20\u6307\u6A19\u79FB\u5230\u7BC0\u9EDE\u4E00\u6BB5\u6642\u9593\u5F8C\u81EA\u52D5\u9078\u53D6
 selection_method_direct=\u6ED1\u9F20\u6307\u6A19\u79FB\u5230\u7BC0\u9EDE\u5373\u81EA\u52D5\u9078\u53D6
@@ -1732,11 +1732,11 @@ simplyhtml.valignMiddle=\u7F6E\u4E2D
 simplyhtml.valignTop=\u4E0A\u65B9
 simplyhtml.wholeWordsOnly=\u7B26\u5408\u6574\u500B\u6587\u5B57
 simplyhtml.wholeWordsOnly.tooltip=\u9650\u5236\u8981\u5C0D\u6574\u500B\u5B57\u5339\u914D\u3002
-SortNodes.text=(&S)\u6392\u5E8F\u5B50\u7BC0\u9EDE
+SortNodes.text=(S)\u6392\u5E8F\u5B50\u7BC0\u9EDE
 SortNodes.tooltip=\u6309\u5B57\u6BCD\u9806\u5E8F\u6392\u5E8F\u5B50\u7BC0\u9EDE\u3002
 split=(&S)\u5206\u5272
 SplitConditionAction.text=\u5206\u5272
-SplitNode.text=(&S)\u5206\u5272\u7BC0\u9EDE (\u7BC0\u9EDE\u5167\u5BB9\u5FC5\u9808\u6709\u5169\u884C\u4EE5\u4E0A)
+SplitNode.text=(S)\u5206\u5272\u7BC0\u9EDE (\u7BC0\u9EDE\u5167\u5BB9\u5FC5\u9808\u6709\u5169\u884C\u4EE5\u4E0A)
 SplitNode.tooltip=<html>\u7BC0\u9EDE\u6703\u88AB\u5206\u5272</html>
 STANDARD_FORMAT=\u6A19\u6E96
 stop_processing=\u505C\u6B62
@@ -1791,17 +1791,17 @@ ToggleDetailsAction.text=\u96B1\u85CF\u7BC0\u9EDE\u7D30\u7BC0
 ToggleFBarAction.text=\u529F\u80FD\u9375\u5217
 ToggleFoldedAction.text=\u5C55\u958B/\u647A\u758A \u7BC0\u9EDE
 ToggleFullScreenAction.text=\u5168\u87A2\u5E55\u6A21\u5F0F
-ToggleLeftToolbarAction.text=(&I)\u5DE6\u908A\u5C0F\u5716\u793A\u9078\u55AE
+ToggleLeftToolbarAction.text=(I)\u5DE6\u908A\u5C0F\u5716\u793A\u9078\u55AE
 ToggleMenubarAction.text=\u9078\u55AE\u5217
 ToggleScrollbarsAction.text=\u6372\u8EF8
 ToggleStatusAction.text=\u986F\u793A\u72C0\u614B\u5217
-ToggleToolbarAction.text=(&T)\u5DE5\u5177\u5217
+ToggleToolbarAction.text=(T)\u5DE5\u5177\u5217
 toolbars=\u5DE5\u5177\u5217
 undefined_error=\u975E\u9810\u671F\u7684\u932F\u8AA4\uFF0C\u8ACB\u63D0\u51FA\u932F\u8AA4\u5831\u544A\u3002
 underline=\u5E95\u7DDA
 UnderlineAction.text=\u5E95\u7DDA
 underlined=\u52A0\u4E0A\u5E95\u7DDA
-UndoAction.text=(&U)\u5FA9\u539F
+UndoAction.text=(U)\u5FA9\u539F
 UndoFilterAction.text=\u5FA9\u539F
 unfold=\u5C55\u958B
 UnfoldAllAction.text=\u5168\u90E8\u5C55\u958B
